随机抽文件校对

--- a/OEBPS/Text/c028.xhtml
+++ b/OEBPS/Text/c028.xhtml
@@ -105,7 +105,7 @@
     <p>但是只有精灵不同。他们虽然是这个世界上最繁荣的法鲁什，但语言却完全统一了。</p>
     <p>譬如即使能说orukusu语，去了其他的国家同样的吸血鬼也有话不通的事。</p>
     <p>但是精灵不是那样的。只要掌握了精灵语，就一定能沟通。</p>
-    <p>因此精灵语的通用性很高，在精灵以外的法尔什，行会的职员等也经常记得精灵语。</p>
+    <p>因此精灵语的通用性很高，在精灵以外的法鲁什，行会的职员等也经常记得精灵语。</p>
     <p>即使去了语言不通的异国，只要掌握了精灵语，就有可能实现。</p>
     <p>唯有这个学科，果然梅赛德斯也从不富裕。</p>
     <p>前世的知识完全不起作用的未知的语言等不能简单地学会。</p>
