--- a/OEBPS/Text/c034.xhtml
+++ b/OEBPS/Text/c034.xhtml
@@ -118,7 +118,7 @@
     <p>梅赛德斯想吐气。</p>
     <p>看来现在的Arventroto王是正当的王家的血族的吉克林德由于妨碍打算消除。</p>
     <p>所以打算和其他国家联手消除她，以自己的地位为基石。</p>
-    <p>吉林登把这件事……不，不知道吧。</p>
+    <p>吉克林德把这件事……不，不知道吧。</p>
     <p>她一定深信自己不是王族，而是带着守护王族使命的影武者。</p>
     <p>问题是，为什么是“现在”……。</p>
     <p>这样想的话，白装束突然变成了为ha的脸，自己的头刺了短刀。</p>
