--- a/OEBPS/Text/c041.xhtml
+++ b/OEBPS/Text/c041.xhtml
@@ -23,7 +23,7 @@
     <p>“<span class="character">是侍奉城堡的治愈师团队，公主殿下。他们已经离开了座位</span>”</p>
     <p>汉娜回答吉克林德的问题。</p>
     <p>治愈师在这个国家里，换句话说，就是代替医生的存在。</p>
-    <p>在吸血鬼的国家，医疗技术并没有发展到令人叹息的程度。可以说是四大法尔什中最低吧。</p>
+    <p>在吸血鬼的国家，医疗技术并没有发展到令人叹息的程度。可以说是四大法鲁什中最低吧。</p>
     <p>这个国家的文明中世纪水平，也有只不明白效果的迷信的药称为中心,不过，因为那个以上吸血鬼这个种族自己治愈力更高。</p>
     <p>也有普通的医生，说白了就是个背地里人。</p>
     <p>要是轻伤适当地没有效果的药处方结束。如果是重症的话切断患部等待再生。</p>
