--- a/OEBPS/Text/c042.xhtml
+++ b/OEBPS/Text/c042.xhtml
@@ -16,7 +16,7 @@
     <p>那是从伊扎克私人房间的保险柜出来的东西，上面写着左右今后国家行踪的内容。</p>
     <p>伯恩哈特曾经有一个疑问。</p>
     <p>那就是『为什么是现在』。</p>
-    <p>到目前为止应该也多次发生过杀死吉林登的时机。婴儿的时候杀的事也能吧。</p>
+    <p>到目前为止应该也多次发生过杀死吉克林德的时机。婴儿的时候杀的事也能吧。</p>
     <p>但是伊扎克没有做那个。</p>
     <p>那个理由是血。能操纵王剑的只有王家的血统，除了吉克林德和他的母亲以外没有其他人能操纵王剑。</p>
     <p>伊扎克养吉克林德父女，定期采集血液的事根据调查判明。</p>
