--- a/OEBPS/Text/c044.xhtml
+++ b/OEBPS/Text/c044.xhtml
@@ -14,7 +14,7 @@
     <h1>44. 派系之争</h1>
     <p>面临夏季中旬，伊甸园笼罩在紧张的气氛中。</p>
     <p>这个时期举办的狩猎祭绝不是单纯的活动。</p>
-    <p>各城市的贵族、商人、行会相关人员，有名的贴纸、其他各种职业、组织长官、干部，甚至军方相关人员都来参观学习。</p>
+    <p>各城市的贵族、商人、行会相关人员，有名的seeker、其他各种职业、组织长官、干部，甚至军方相关人员都来参观学习。</p>
     <p>那个理由当然看准了。从现在开始寻找值得一看的学生，在被其他组织盯上之前先吐口水。为此他们才来。</p>
     <p>这对学生们来说也是少有的好机会。</p>
     <p>继承家督的事决定的贵族的长子等暂且不论，不是那样的人等大半必须靠自己找到工作活去。</p>
@@ -63,35 +63,35 @@
     <p>自称盖茨·赫尔德林的男子爽朗地笑，显示了回答梅赛德斯疑问的姿势。</p>
     <p>现在的地方友好,不过，用笑容接近的人那样不可信。</p>
     <p>总之，梅赛德斯想，现在就只听一听令人感激的说明吧。</p>
-    <p>“两周后举办的狩猎祭，实际上在学生之间分成了几个派系。</p>
-    <p>在中心的，全体人员是侯爵家以上。</p>
-    <p>因为他们四个人形成了各自的派系，所以被称为四大派系”</p>
+    <p>“<span class="character">两周后举办的狩猎祭，实际上在学生之间分成了几个派系。</span></p>
+    <p><span class="character">在中心的，全体人员是侯爵家以上。</span></p>
+    <p><span class="character">因为他们四个人形成了各自的派系，所以被称为四大派系”</span></p>
     <p>成为侯爵家的话，其名字所具有的影响力是无法估量的。</p>
     <p>如果成为比那个更高的公爵还好。</p>
     <p>只要不是像梅赛德斯那样的女人四子，周围的人就会围着围巾围着零食吧。</p>
     <p>并且如果那个复数，对立某种意义必然能说。</p>
-    <p>“大致分为四个派系。</p>
+    <p>“<span class="character">大致分为四个派系。</span></p>
     <p>“<span class="character">浓雾”派、“螺旋”派、“雷鸣”派、以及“鲜血”派。这个派系的名字取自各个家族所治理的城市的名字</span>”</p>
-    <p>“……《鲜血》派的中心人物是？</p>
-    <p>“正如你所知，是你哥哥的菲利克斯。</p>
-    <p>果然还是想加入哥哥的派系吧……最好不要去那里”</p>
+    <p>“<span class="character">……《鲜血》派的中心人物是？</span></p>
+    <p>“<span class="character">正如你所知，是你哥哥的菲利克斯。</span></p>
+    <p><span class="character">果然还是想加入哥哥的派系吧……最好不要去那里</span>”</p>
     <p>首先，梅赛德斯不想加入任何派系。</p>
     <p>但是一般来说去兄弟所在的地方比较普遍。</p>
     <p>虽然盖茨也是这么想的，但是他反对加入菲利克斯派。</p>
-    <p>“那里是……怎么说呢，已经看见输了。</p>
-    <p>到去年为止是首位势力,不过，好象生日搞的……。</p>
-    <p>如果是妹妹的你也许知道,不过，生日魔物好象闹腾了。</p>
-    <p>因此导致了贵族的伟人们都暴露在危险之中，由于信赖的失误不断出现叛逆者”</p>
+    <p>“<span class="character">那里是……怎么说呢，已经看见输了。</span></p>
+    <p><span class="character">到去年为止是首位势力,不过，好象生日搞的……。</span></p>
+    <p><span class="character">如果是妹妹的你也许知道,不过，生日魔物好象闹腾了。</span></p>
+    <p><span class="character">因此导致了贵族的伟人们都暴露在危险之中，由于信赖的失误不断出现叛逆者</span>”</p>
     <p>那件事当然梅赛德斯也知道。</p>
     <p>既是当事人，又是生日时闹腾的魔物，现在在梅赛德斯的部下，而且现在正在做妃子的料理吧。</p>
     <p>但话虽如此，那件事似乎在显著地动摇了菲利克斯在贵族社会的立场。</p>
     <p>无论到哪里都不幸运的哥哥。梅赛德斯觉得他有点可怜。</p>
-    <p>“你第一年里是吉克哈特……啊，不，是吉克林德公主吧……。</p>
-    <p>总之，她和公主一样成绩第一，而且有拯救王家危机的经历。</p>
-    <p>四年……不，到了三年，以你为中心的派系肯定会成立吧。</p>
-    <p>正因为如此，在这种地方跌倒太可惜了。你应该更上一层的吸血鬼。</p>
-    <p>我们可以让你积累经验，教你如何管理派系。</p>
-    <p>怎么样？不和我们联手吗？”</p>
+    <p>“<span class="character">你第一年里是吉克哈特……啊，不，是吉克林德公主吧……。</span></p>
+    <p><span class="character">总之，她和公主一样成绩第一，而且有拯救王家危机的经历。</span></p>
+    <p><span class="character">四年……不，到了三年，以你为中心的派系肯定会成立吧。</span></p>
+    <p><span class="character">正因为如此，在这种地方跌倒太可惜了。你应该更上一层的吸血鬼。</span></p>
+    <p><span class="character">我们可以让你积累经验，教你如何管理派系。</span></p>
+    <p><span class="character">怎么样？不和我们联手吗？</span>”</p>
     <p>梅赛德斯暂时考虑一下盖茨的邀请。</p>
     <p>光听话给人的印象并不坏。</p>
     <p>虽然不认为以自己为中心派系什么的，但是积累经验不是件坏事吧。</p>
@@ -102,7 +102,7 @@
     <p>戈茨遗憾地挠着脸，爽朗地笑了。</p>
     <p>可是梅赛德斯正要走的时候，别的男人挡着路不让通过。</p>
     <p>“<span class="character">喂……你认为你有否决权吗？在我们温柔的时候就变得坦率吧，小姐</span>”</p>
-    <p>梅赛德斯叹息道：原来如此，要采取这种手段啊。</p>
+    <p>梅赛德斯叹息道：<span class="character">原来如此，要采取这种手段啊。</span></p>
     <p>但是很容易理解。这样的话，我也不用修饰。</p>
     <p>如果妨碍的话，就只是在这里排除罢了。</p>
     <p>“<span class="character">你可别停得太高了。就算是公爵家……</span>”</p>
@@ -114,8 +114,8 @@
     <p>到底这是事故呢，还是“我是阻止暴走的舍弟的温柔男子”的演出呢……。</p>
     <p>不管怎么说，梅赛德斯中的评价没有提高。</p>
     <p>她不露面，对雷鸣派的评价下降了三级左右。</p>
-    <p>“对不起！我们的怪物真的失礼了！</p>
-    <p>下次就不会再做这种事了，好好说给他听！”</p>
+    <p>“<span class="character">对不起！我们的怪物真的失礼了！</span></p>
+    <p><span class="character">下次就不会再做这种事了，好好说给他听！</span>”</p>
     <p>盖茨这样说着，深深地低下了头。</p>
     <p>虽然不知道一边道歉一边在想什么，总之，已经没什么可说的了。</p>
     <p>刚才那个男的还盯着梅赛德斯，很不愉快。</p>
@@ -131,32 +131,32 @@
     <p>盖茨，从刚才的好青年沾染了的脸一变，向(以)凶恶的形态变化着。</p>
     <p>露出牙齿，额头上浮出了血管。眼睛变成了三白眼，声音也从刚才的温柔中一下子变了，变得非常不高兴。</p>
     <p>压着鼻子，揪起蹲在地上的男人的头发，接着盖茨将膝盖拍进他的脸上。</p>
-    <p>“真的太好了吗？不好意思吧，最糟糕了。都是因为你。</p>
-    <p>我也不明白我特意自己前往劝诱的意义啊……。</p>
-    <p>为什么要学着买不高兴呢……。</p>
-    <p>公主的恩人、公爵家的成绩第一……被那样的人才有负的感情怎样做啊。</p>
-    <p>什么？你难道是其他派系的旋转兽吗？妨碍我吗？”</p>
+    <p>“<span class="character">真的太好了吗？不好意思吧，最糟糕了。都是因为你。</span></p>
+    <p><span class="character">我也不明白我特意自己前往劝诱的意义啊……。</span></p>
+    <p><span class="character">为什么要学着买不高兴呢……。</span></p>
+    <p><span class="character">公主的恩人、公爵家的成绩第一……被那样的人才有负的感情怎样做啊。</span></p>
+    <p><span class="character">什么？你难道是其他派系的旋转兽吗？妨碍我吗？</span>”</p>
     <p>“<span class="character">我只是想成为盖茨先生的力量……</span>”</p>
     <p>“<span class="character">啊？</span>”</p>
     <p>盖茨露骨地咂嘴，把男子摔在地板上。</p>
-    <p>“喂，你那小小的脑袋，可能还不明白吧……学园毕业后人生也会继续下去的吧？那个小姑娘迟早要成个大人物的……所以如果现在就养个关系，然后再卖个恩惠的话，说不定之后就能得到便利了。</p>
-    <p>不过是学园的派系游戏···成为干部了不起的气，象子爵的六男坊一样地好……。</p>
-    <p>明白吗？那边是上边，这边是下边。</p>
-    <p>我们只是个高年级学生，将来也会成为对那个女孩子低头的人。</p>
-    <p>正因为如此，现在就应该赚积分了”</p>
+    <p>“<span class="character">喂，你那小小的脑袋，可能还不明白吧……学园毕业后人生也会继续下去的吧？那个小姑娘迟早要成个大人物的……所以如果现在就养个关系，然后再卖个恩惠的话，说不定之后就能得到便利了。</span></p>
+    <p><span class="character">不过是学园的派系游戏···成为干部了不起的气，象子爵的六男坊一样地好……。</span></p>
+    <p><span class="character">明白吗？那边是上边，这边是下边。</span></p>
+    <p><span class="character">我们只是个高年级学生，将来也会成为对那个女孩子低头的人。</span></p>
+    <p><span class="character">正因为如此，现在就应该赚积分了</span>”</p>
     <p>一边说着，盖茨踩到了男人的头。</p>
     <p>“<span class="character">你知道吗？像你这样的垃圾，可以替代多少，只是说不能代替那位小姐而已</span>”</p>
     <p>践踏，踩踏。</p>
-    <p>“啊……好不容易，我以为我找到了特别好的东西。</p>
-    <p>从小就很亲切，教他很多东西，然后把《可靠的温柔前辈》演到毕业，等到小姑娘变得了不起的时候，就会变得很灵活了”</p>
+    <p>“<span class="character">啊……好不容易，我以为我找到了特别好的东西。</span></p>
+    <p><span class="character">从小就很亲切，教她很多东西，然后把《可靠的温柔前辈》演到毕业，等到小姑娘变得了不起的时候，就会变得很灵活了</span>”</p>
     <p>践踏，踩踏。</p>
-    <p>“你知道吗？木偶之坊。所谓贵族社会，总而言之，就是处世和谄媚。</p>
-    <p>被上级看好的家伙会出人头地的。找出看上去会出人头地的家伙，然后把他引进来的家伙成功了。</p>
-    <p>只不过是在几年前出生的可恶的自尊心被优先的笨蛋，之后会受到报复而沉沦下去”</p>
+    <p>“<span class="character">你知道吗？木偶之坊。所谓贵族社会，总而言之，就是处世和谄媚。</span></p>
+    <p><span class="character">被上级看好的家伙会出人头地的。找出看上去会出人头地的家伙，然后把她引进来的家伙成功了。</span></p>
+    <p><span class="character">只不过是在几年前出生的可恶的自尊心被优先的笨蛋，之后会受到报复而沉沦下去</span>”</p>
     <p>践踏，踩踏。</p>
-    <p>“为什么给我啊……那肯定是负面的印象吧。</p>
-    <p>把这个传达给公主吧。我们是威胁国家恩人的大**。</p>
-    <p>最糟糕，也影响到将来的成功”</p>
+    <p>“<span class="character">为什么给我啊……那肯定是负面的印象吧。</span></p>
+    <p><span class="character">把这个传达给公主吧。我们是威胁国家恩人的大**。</span></p>
+    <p><span class="character">最糟糕，也影响到将来的成功</span>”</p>
     <p>盖茨故意地吐出叹息，抓住沾满鲜血的男人的头。</p>
     <p>然后，狠狠地敲打着碎了的地板。</p>
     <p>“<span class="character">你！</span>”</p>
