--- a/OEBPS/Text/c046.xhtml
+++ b/OEBPS/Text/c046.xhtml
@@ -35,10 +35,10 @@
     <p>名前と家名が同じとは、覚えやすいなと梅赛德斯は場違いな感想を抱いた。</p>
     <p>それにしてもネーベルバンクという名前は何処かで聞き覚えがある気がする。</p>
     <p>はて、どこで聞いた名前だったか。</p>
-    <p>“両脇にいるこいつ等は僕の護衛だ。</p>
-    <p>王家に古くから仕える裏の重鎮とも言える一族がいてね。この二人はその当主の血を引く者達さ。</p>
-    <p>更に彼等の母は王家直属の隠密部隊の隊長でもあり、僕の家庭教师でもある。</p>
-    <p>ああ、脅しているわけではないよ。ただ事実を教えているだけさ”</p>
+    <p>“<span class="character">両脇にいるこいつ等は僕の護衛だ。</span></p>
+    <p><span class="character">王家に古くから仕える裏の重鎮とも言える一族がいてね。この二人はその当主の血を引く者達さ。</span></p>
+    <p><span class="character">更に彼等の母は王家直属の隠密部隊の隊長でもあり、僕の家庭教师でもある。</span></p>
+    <p><span class="character">ああ、脅しているわけではないよ。ただ事実を教えているだけさ</span>”</p>
     <p>随分とお喋りかつ、自慢したがりな性格らしい。</p>
     <p>この時点で既に三下感が漂っているが、梅赛德斯はあえて指摘せず言葉を聞いていた。</p>
     <p>本人の能力はさておき、とりあえずコネという点ではかなり優れているらしい。</p>
@@ -51,8 +51,8 @@
     <p>家を出て行く際にいずれ立ち塞がるだろう父、ベルンハルトだ。</p>
     <p>そしてこの世界の真実を探す上で必ず衝突するいくつものダンジョンや、ダンジョン所有者こそが梅赛德斯の見据える仮想敵である。</p>
     <p>派閥だの何だの、そんな小さなものは最初から眼中にないのである。</p>
-    <p>“ふ……どうやら君は勘違いしているようだ。</p>
-    <p>これはお願いではない。ハルトマン家次期当主たる僕が命令しているんだよ”</p>
+    <p>“<span class="character">ふ……どうやら君は勘違いしているようだ。</span></p>
+    <p><span class="character">これはお願いではない。ハルトマン家次期当主たる僕が命令しているんだよ</span>”</p>
     <p>ハルトマンがそう言うと、護衛の木偶の坊二人が前に出た。</p>
     <p>やはりこうなったか、と内心うんざりしながらも無言で拳を握る。</p>
     <p>来るというなら仕方ない。骨の十本や二十本は覚悟してもらおう。</p>
@@ -81,15 +81,15 @@
     <p>いやそれより、つまりはあれだ。このデカブツ二人はどうも汉娜の息子だったらしい。</p>
     <p>正直全然似ていないし、子供にしか見えない汉娜からどうやってこんなデカいのが産まれたのか全然分からないが、彼等の反応を見る限り嘘はなさそうだ。</p>
     <p>……養子とかならばまだ納得は出来なくもない。</p>
-    <p>“さて。話は聞かせてもらいました。</p>
-    <p>貴方達は一体いつから、他人を脅すような悪い子になっちゃったんですか？　私はとても悲しいです”</p>
+    <p>“<span class="character">さて。話は聞かせてもらいました。</span></p>
+    <p><span class="character">貴方達は一体いつから、他人を脅すような悪い子になっちゃったんですか？　私はとても悲しいです</span>”</p>
     <p>“<span class="character">あ、いや、その、それは、えっと、言葉のあやというか……ほ、本当にやる気なんてなかったというか……なあ？</span>”</p>
     <p>ハルトマンが護衛二人に慌てて話を振ると、二人は勢いよく首を縦に振った。</p>
     <p>どうやらかなり恐れられているようだ。</p>
     <p>しかし汉娜は笑顔を浮かべつつも、発する気配は剣呑さを増している。</p>
-    <p>“実行の有無に関係なく、そうして圧力をかけて従わせようとする行為を脅迫と言います。</p>
-    <p>私達貴族は大きな権力を持つからこそ、その力の使い所を考えなくてはなりません。</p>
-    <p>自らの為だけに他者を従わせるのでは暴君と変わりません”</p>
+    <p>“<span class="character">実行の有無に関係なく、そうして圧力をかけて従わせようとする行為を脅迫と言います。</span></p>
+    <p><span class="character">私達貴族は大きな権力を持つからこそ、その力の使い所を考えなくてはなりません。</span></p>
+    <p><span class="character">自らの為だけに他者を従わせるのでは暴君と変わりません</span>”</p>
     <p>余談だが、自らの為だけに他者を従わせて子供まで孕ませた男が梅赛德斯の父である。</p>
     <p>“<span class="character">看来你们有必要进行再教育呢。</span>”</p>
     <p>“<span class="character">好棒！？饶了我吧！</span>”</p>
@@ -100,8 +100,8 @@
     <p>“<span class="character">……啊啊，结束了啊</span>”</p>
     <p>汉娜笑着抓住了两个人的脖子，兔子抓住哈特曼的脚，拖拉着。</p>
     <p>于是，流着泪，带着三个求生者，向教室外走去。</p>
-    <p>“啊，对不起，梅露，给你添麻烦了。我会好好告诉这些孩子们的。</p>
-    <p>之后还有些话想和你说，空出时间来吧”</p>
+    <p>“<span class="character">啊，对不起，梅露，给你添麻烦了。我会好好告诉这些孩子们的。</span></p>
+    <p><span class="character">之后还有些话想和你说，空出时间来吧</span>”</p>
     <p>最后汉娜退出了这句话，拖拉的声音远去了。</p>
     <p>“<span class="character">对不起</span>”</p>
     <p>“<span class="character">我再也不做了</span>”</p>
@@ -143,7 +143,7 @@
     <p>所谓他人就是现金的东西。</p>
     <p>一知道不能吸甜蜜，就一个接一个地离开了菲利克斯。</p>
     <p>剩下的大部分人，是强迫弱了的菲利克斯遵从的事强迫打算蒙上恩的狡猾的人们。</p>
-    <p>“即使到了这种情况，我也不能看清自己，所以要优待自己”。</p>
+    <p>“<span class="character">即使到了这种情况，我也不能看清自己，所以要优待自己</span>”。</p>
     <p>但是那些人也只是不知道格鲁内瓦特家的实情。</p>
     <p>如果知道伯恩哈特的关心早已转移到妹妹那边的话，他们一定会舍弃菲利克斯，摩擦到梅赛德斯。</p>
     <p>这也不是卑鄙的行为。</p>
@@ -154,6 +154,6 @@
     <p>围困者一个也没有。</p>
     <p>现在，他孤独得无比凄惨。</p>
     <p>所以吧。想附着在那里的人出现。</p>
-    <p>“<span class="character">菲利克斯·格鲁内瓦特小姐是吧？对你有好消息</span>”</p>
+    <p>“<span class="character">菲利克斯·格鲁内瓦特是吧？对你有好消息</span>”</p>
     <p>这样说着，突然和我搭话的是一个身着白色服装的男人——手里握着封石。</p>
 </body>
