--- a/OEBPS/Text/c047.xhtml
+++ b/OEBPS/Text/c047.xhtml
@@ -19,16 +19,16 @@
     <p>这样一来，魔物当然被封印在那之中了。</p>
     <p>不知道那里面放着的魔物是哪个等级,不过，如果是以前出了的贝赛德兽级的魔物菲利克斯的手不能承受吧。</p>
     <p>“<span class="character">好话？</span>”</p>
-    <p>“是的。这块石头连菲利克斯先生都看过吧。</p>
-    <p>这个叫做封石，是封印魔物可以携带的东西”</p>
+    <p>“<span class="character">是的。这块石头连菲利克斯先生都看过吧。</span></p>
+    <p><span class="character">这个叫做封石，是封印魔物可以携带的东西</span>”</p>
     <p>“<span class="character">……波利斯用过的石头也是你准备的吗？</span>”</p>
     <p>“<span class="character">是的。就是那样</span>”</p>
     <p>对于菲利克斯的提问，白装束坦白了。</p>
     <p>没必要隐瞒吧。</p>
     <p>或者，他可能认为自己并不是一个可以隐瞒的对手。</p>
     <p>不管怎样，只有被舐的事看起来没错。</p>
-    <p>“这里面封存着和贝赛德兽同等级的强力魔物。</p>
-    <p>这个给你吧”</p>
+    <p>“<span class="character">这里面封存着和贝赛德兽同等级的强力魔物。</span></p>
+    <p><span class="character">这个给你吧</span>”</p>
     <p>“<span class="character">……所以我收到了什么？你认为我愚蠢到如此地步了吗？</span>”</p>
     <p>不可能接受。</p>
     <p>那是谁都知道的事。用不着考虑。</p>
@@ -37,11 +37,11 @@
     <p>可是白装束好象预期那个回答一样地笑。</p>
     <p>“<span class="character">但若不是愚蠢的人，你就无法继承家业</span>”</p>
     <p>“<span class="character">……</span>”</p>
-    <p>“你的立场非常危险。而且还有太优秀的妹妹。</p>
-    <p>最决定性的是……你是伯恩哈特卿的真正儿子”</p>
+    <p>“<span class="character">你的立场非常危险。而且还有太优秀的妹妹。</span></p>
+    <p><span class="character">最决定性的是……你是伯恩哈特卿的真正儿子</span>”</p>
     <p>“<span class="character">你这家伙！</span>”</p>
-    <p>“哎呀，失礼了。但是你隐约感觉到了吗？</p>
-    <p>你的金发不是妈妈和爸爸那两种发色。那么那头发到底是从哪里遗传下来的呢？”</p>
+    <p>“<span class="character">哎呀，失礼了。但是你隐约感觉到了吗？</span></p>
+    <p><span class="character">你的金发不是妈妈和爸爸那两种发色。那么那头发到底是从哪里遗传下来的呢？</span>”</p>
     <p>菲利克斯没能马上回复。</p>
     <p>我并不是怀疑母亲的不贞。</p>
     <p>但是现实中，自己的头发的颜色和母亲和父亲都不一样。</p>
@@ -51,8 +51,8 @@
     <p>正因为如此，才会嫉妒妹妹。</p>
     <p>一眼就看得出来，继承着浓厚的父亲的血统，尽管如此，格鲁内瓦特的名声也好，家里也好，都没有表现出极其执着的妹妹，真是令人羡慕，即使知道自己也很丑陋，也觉得嫉妒。</p>
     <p>多么讽刺啊。比谁都想被父亲认可，想继承家的自己不像父亲……完全没有被父亲认可的心情，单纯地只考虑利用价值某种程度的妹妹与父亲相似，比谁都适合继承格鲁内瓦特的名字。</p>
-    <p>“你不能这么做。家名也继承不了。</p>
-    <p>这会成为你如此可怜的力量”</p>
+    <p>“<span class="character">你不能这么做。家名也继承不了。</span></p>
+    <p><span class="character">这会成为你如此可怜的力量</span>”</p>
     <p>“<span class="character">……这叫火柴泵</span>”</p>
     <p>“这是理所当然的。但是，你却有足够的理由伸出手。</p>
     <p>至少周围人会认为是因为你的暴走吧”</p>
@@ -60,15 +60,15 @@
     <p>我确信了这句话。这个男人从一开始就不征求菲利克斯的同意。</p>
     <p>重要的是周围的人怎么想。</p>
     <p>菲利克斯有充分的理由暴走，想障碍的妹妹在，用自己的意思做愚蠢的仿效也不可笑···。</p>
-    <p>“原来如此，我看得懂了。</p>
-    <p>对你们来说我的意思怎么样都无所谓。我应该在适当的时机使用这块石头，这个事实才是必要的。</p>
-    <p>这石头中的魔物……你不听我说的话吧？</p>
-    <p>恐怕，和以前的贝赛德兽一样……或者，不是更加暴走，增加受害吗？</p>
-    <p>因此，如果贵族的子息出现死者也是最糟糕的。不仅是我，那个责任也波及到父亲。</p>
-    <p>然后世间会这么想吧。“格鲁内瓦特的儿子因为嫉妒妹妹而暴走，甚至伤害到周围的人。”</p>
+    <p>“<span class="character">原来如此，我看得懂了。</span></p>
+    <p><span class="character">对你们来说我的意思怎么样都无所谓。我应该在适当的时机使用这块石头，这个事实才是必要的。</span></p>
+    <p><span class="character">这石头中的魔物……你不听我说的话吧？</span></p>
+    <p><span class="character">恐怕，和以前的贝赛德兽一样……或者，不是更加暴走，增加受害吗？</span></p>
+    <p><span class="character">因此，如果贵族的子息出现死者也是最糟糕的。不仅是我，那个责任也波及到父亲。</span></p>
+    <p><span class="character">然后世间会这么想吧。“格鲁内瓦特的儿子因为嫉妒妹妹而暴走，甚至伤害到周围的人。</span>”</p>
     <p>“<span class="character">ほうほう。真是有趣的考察啊</span>”</p>
-    <p>“这样的话，父亲的权威也会受到影响。最初的目标就是这个。</p>
-    <p>用玻利斯让我着急……或者，急着乱跑也不会不自然的状况，用我取父亲的名字。这便是你们的目的”</p>
+    <p>“<span class="character">这样的话，父亲的权威也会受到影响。最初的目标就是这个。</span></p>
+    <p><span class="character">用玻利斯让我着急……或者，急着乱跑也不会不自然的状况，用我取父亲的名字。这便是你们的目的</span>”</p>
     <p>他们的目标。菲利克斯读了那个从最初是『制作状况的事』。</p>
     <p>从不寻求这边的同意的事，恐怕能使用操纵对方的催眠什么魔法吧。</p>
     <p>雷属性的魔法有那样的东西。</p>
@@ -80,10 +80,10 @@
     <p>因此首先使用玻利斯这个笨蛋危险菲利克斯的立场，制作了暴走也不可笑的状况。</p>
     <p>并且由于狩猎节这个最高的时机菲利克斯使之使用封石的事下降伯恩哈特的影响力。</p>
     <p>反过来说，这个作战正是证明他们害怕伯尔尼哈特。</p>
-    <p>“只说基本正确。</p>
-    <p>而且如果只是这样想的话，我也能明白我以十二分的胜算在这里吧”</p>
-    <p>“啊。从刚才开始就没有学生不自然。</p>
-    <p>而且像这样站在我面前的你，也拥有能够让我变得更容易的无力化的本领吧”</p>
+    <p>“<span class="character">只说基本正确。</span></p>
+    <p><span class="character">而且如果只是这样想的话，我也能明白我以十二分的胜算在这里吧</span>”</p>
+    <p>“<span class="character">啊。从刚才开始就没有学生不自然。</span></p>
+    <p><span class="character">而且像这样站在我面前的你，也拥有能够让我变得更容易的无力化的本领吧</span>”</p>
     <p>“<span class="character">领悟到无力是件悲哀的事啊</span>”</p>
     <p>白衣裳嘲笑似的说。</p>
     <p>即使目的败露，他也不会受到伤害。</p>
@@ -95,8 +95,8 @@
     <p>菲利克斯赢不了他吧。</p>
     <p>但是只有在理解伯恩哈特这一点上，我才有胜出的信心。</p>
     <p>因为想被认可，一直看着。</p>
-    <p>“不是看不出那种程度的策略的男人。他可是一代晋升为公爵家，用暴力和阴谋跨越贵族社会的伯恩哈特卿。</p>
-    <p>无论是你们的企图，还是下一次接触的对象是我，早就看穿了，并采取手段了吧”</p>
+    <p>“<span class="character">不是看不出那种程度的策略的男人。他可是一代晋升为公爵家，用暴力和阴谋跨越贵族社会的伯恩哈特卿。</span></p>
+    <p><span class="character">无论是你们的企图，还是下一次接触的对象是我，早就看穿了，并采取手段了吧</span>”</p>
     <p>“<span class="character">……很Hatari啊。伯恩哈特没有接触到你。书信的交换，甚至提醒注意。什么都不告诉就把自己的孩子当做诱饵来利用等等……</span>”</p>
     <p>“<span class="character">我会做的……。那个吸血鬼人会毫不犹豫地做完那些事</span>”</p>
     <p>菲利克斯的话刚一结束，身着白衣的后背就被寒冷冲了过去。</p>
