--- a/OEBPS/Text/c049.xhtml
+++ b/OEBPS/Text/c049.xhtml
@@ -28,8 +28,8 @@
     <p>学园长是秃顶的老人，经常摇摇晃晃地晃来晃去。</p>
     <p>看来不老期实在是太晚了。这样就没有长生不老的意义了，他今后的一生必须一直作为老人度过吧。</p>
     <p>这样想的话总觉得可怜。</p>
-    <p>“叫弗里德里克·贝肯巴尔。原来是我的同学啊。</p>
-    <p>但是不老期到90岁都不会到来……”</p>
+    <p>“<span class="character">叫弗里德里克·贝肯巴尔。原来是我的同学啊。</span></p>
+    <p><span class="character">但是不老期到90岁都不会到来……</span>”</p>
     <p>“<span class="character">……命运真是不公平啊</span>”</p>
     <p>校长——弗里德里克似乎和汉娜同岁。</p>
     <p>梅赛德斯十分同情门他。</p>
@@ -40,11 +40,11 @@
     <p>自己年轻的时候精力充沛啦，头发也蓬松啦，帅啦。</p>
     <p>总之，是与狩猎节完全没有关系的回忆话。</p>
     <p>不久，古斯塔夫被其他职员强制从台上卸下，别人代替他继续说明。</p>
-    <p>“我来说明一下狩猎节的规则。</p>
-    <p>不超出规定时间限制内的范围，打倒魔物带回特定的部位。就这些。</p>
-    <p>不接受不是能带回去的哭诉。既要使用粗野兽，又要事先准备好背包，这样做多少都有办法。这也是作为本人机智被评价的部分。</p>
-    <p>超过限定时间仍捕猎猎者，出范围者当场失去资格。</p>
-    <p>同时，对其他的学生的攻击也同样禁止。一发现就让他退场”</p>
+    <p>“<span class="character">我来说明一下狩猎节的规则。</span></p>
+    <p><span class="character">不超出规定时间限制内的范围，打倒魔物带回特定的部位。就这些。</span></p>
+    <p><span class="character">不接受不是能带回去的哭诉。既要使用粗野兽，又要事先准备好背包，这样做多少都有办法。这也是作为本人机智被评价的部分。</span></p>
+    <p><span class="character">超过限定时间仍捕猎猎者，出范围者当场失去资格。</span></p>
+    <p><span class="character">同时，对其他的学生的攻击也同样禁止。一发现就让他退场</span>”</p>
     <p>此次，狩猎节的舞台是以前上课时使用的平原。</p>
     <p>但是加之附近的森林和山丘等也作为移动可能区域被开放。</p>
     <p>在上空有乘坐魔物的教师待机，为紧急事态做准备。</p>
@@ -96,10 +96,10 @@
     <p>如果对峙，处于四分五裂状态的吸血鬼大国无论形状如何都要牵手的话，那对于增强国力和维护相互和平这点来说是巨大的力量。</p>
     <p>总之，对贵族来说没有趣,不过，从普通市民来看利大多少。</p>
     <p>虽然统治者更替了，但市民们一点都不在意。只要能保护我们的生活，谁做王都行。</p>
-    <p>“兽共在先前的大战中学习，试图实现种族统一。</p>
-    <p>鸟公们也踏踏实实地朝向统一开始行动，到精灵已经统一国家化也不错。</p>
-    <p>现状是只有吸血鬼我们出晚了。</p>
-    <p>如果是你的话应该明白吧。接下来如果种族间发生世界大战的话……输的是我们”</p>
+    <p>“<span class="character">兽人在先前的大战中学习，试图实现种族统一。</span></p>
+    <p><span class="character">鸟人们也踏踏实实地朝向统一开始行动，到精灵已经统一国家化也不错。</span></p>
+    <p><span class="character">现状是只有吸血鬼我们出晚了。</span></p>
+    <p><span class="character">如果是你的话应该明白吧。接下来如果种族间发生世界大战的话……输的是我们</span>”</p>
     <p>汉娜对古斯塔夫的话不能马上回答。</p>
     <p>因为他的话也有一定的道理。</p>
     <p>八十年前吸血鬼和兽人打了仗，好不容易才取得了胜利。</p>
@@ -109,11 +109,11 @@
     <p>可是从战败兽人学习了。</p>
     <p>如果有下次，输的是吸血鬼。</p>
     <p>“<span class="character">所以说应该被帝国支配？</span>”</p>
-    <p>“我说过吧。哪个都行。</p>
-    <p>像我这样无能为力的想法会导致事态恶化。变成这样”</p>
+    <p>“<span class="character">我说过吧。哪个都行。</span></p>
+    <p><span class="character">像我这样无能为力的想法会导致事态恶化。变成这样</span>”</p>
     <p>“<span class="character">那是……这不是不负责任吗？</span>”</p>
-    <p>“被责任感所冲动，白白考虑自己增加受害的无能才是无法拯救的。</p>
-    <p>我不是像你和伯恩哈特那样聪明的人啊……八十年前，我才明白，傻瓜自己判断的话，只会使同伴死”</p>
+    <p>“<span class="character">被责任感所冲动，白白考虑自己增加受害的无能才是无法拯救的。</span></p>
+    <p><span class="character">我不是像你和伯恩哈特那样聪明的人啊……八十年前，我才明白，傻瓜自己判断的话，只会使同伴死</span>”</p>
     <p>神话中记载的神话中有这样一句话。</p>
     <p>有能力的懒汉即使是司令官。</p>
     <p>能干的劳动者适合参谋。</p>
@@ -124,8 +124,8 @@
     <p>古斯塔夫断定自己是无能的。</p>
     <p>“<span class="character">我是不能像你们一样生存的男人。不像你们那样有能力</span>”</p>
     <p>“<span class="character">我不认为这是英雄的语言</span>”</p>
-    <p>“什么是英雄？我只不过是被祭祀而生锈的剑而已。</p>
-    <p>被我方的血沾染的无可救药的废铁”</p>
+    <p>“<span class="character">什么是英雄？我只不过是被祭祀而生锈的剑而已。</span></p>
+    <p><span class="character">被我方的血沾染的无可救药的废铁</span>”</p>
     <p>只要是剑就行。</p>
     <p>只要是使用者国所希望使用的剑就行。</p>
     <p>如果剑自己考虑，斩杀敌人，那只是不良品。</p>
@@ -136,11 +136,11 @@
     <p>什么是正确的，什么是正确的，是上层的人应该考虑的事。</p>
     <p>聪明的家伙们会这样那样的考虑和美好的未来紧密相连，如果愚蠢以自己的判断和责任感来断送，那只能是黑暗的未来。</p>
     <p>古斯塔夫深知这件事令人讨厌。</p>
-    <p>“<span class="character">我只告诉你一件事。我的班级里已经没有内行了</span>”</p>
+    <p>“<span class="character">我只告诉你一件事。我的班级里已经没有内奸了</span>”</p>
     <p>只说了那个，古斯塔夫出去了。</p>
-    <p>在教室被留下了的hana，咬下嘴唇瞪着门。</p>
-    <p>“……陈旧的剑啊。那么，为什么……教师这个职业……。</p>
-    <p>难道不是不想让自己的错误重复吗？”</p>
+    <p>在教室被留下了的汉娜，咬下嘴唇瞪着门。</p>
+    <p>“<span class="character">……陈旧的剑啊。那么，为什么……教师这个职业……。</span></p>
+    <p><span class="character">难道不是不想让自己的错误重复吗？</span>”</p>
     <p>汉娜的这句话，没有传达到古斯塔夫。</p>
     
 </body>
