--- a/OEBPS/Text/c051.xhtml
+++ b/OEBPS/Text/c051.xhtml
@@ -37,10 +37,10 @@
     <p>那是在笑脸的背后隐藏想法接近，想要操纵对方的人的脸。</p>
     <p>也是前世最讨厌的一张脸。</p>
     <p>弗雷德里克在桌子上拿出了梅赛德斯的成绩表，确认后佩服地点了点头。</p>
-    <p>“笔记、实际技巧都名列前茅。狩猎节也是单独获胜。</p>
-    <p>真了不起。从那以后，你的邀请在学园里接连不断。</p>
-    <p>因为数量太多了，所以我们分了特别好的东西。哎呀已经不是红人了。</p>
-    <p>……我先问一下，你都想看吗？”</p>
+    <p>“<span class="character">笔记、实际技巧都名列前茅。狩猎节也是单独获胜。</span></p>
+    <p><span class="character">真了不起。从那以后，你的邀请在学园里接连不断。</span></p>
+    <p><span class="character">因为数量太多了，所以我们分了特别好的东西。哎呀已经不是红人了。</span></p>
+    <p><span class="character">……我先问一下，你都想看吗？</span>”</p>
     <p>“<span class="character">不，哪个都不想接受，就交给你了。</span>”</p>
     <p>“<span class="character">呵呵，没有欲望啊。还是反过来遥望着前方，对这样的小邀请没兴趣吗？</span>”</p>
     <p>遥远的前方……梅赛德斯的答案是，即使被这么说我也不明白。</p>
@@ -53,11 +53,11 @@
     <p>梅赛德斯没有听漏校长所说的话，一瞬间，黑暗的某些东西笼罩其中。</p>
     <p>表面上是温和的赞扬……看来，人们不怎么认为。</p>
     <p>从前父亲，或者汉娜有什么吗？</p>
-    <p>“那么，这次叫你的理由到底是跳级还是不跳级呢。</p>
-    <p>如果你的成绩，你即使提前升上年级，谁也不会有意见吧。</p>
-    <p>如果希望的话，现在马上就能考试”</p>
-    <p>“难得的提议，请允许我辞退。我来这个学校打下基础。</p>
-    <p>即使早早地毕业也不能达成目的”</p>
+    <p>“<span class="character">那么，这次叫你的理由到底是跳级还是不跳级呢。</span></p>
+    <p><span class="character">如果你的成绩，你即使提前升上年级，谁也不会有意见吧。</span></p>
+    <p><span class="character">如果希望的话，现在马上就能考试</span>”</p>
+    <p>“<span class="character">难得的提议，请允许我辞退。我来这个学校打下基础。</span></p>
+    <p><span class="character">即使早早地毕业也不能达成目的</span>”</p>
     <p>不巩固基础就不能应用。</p>
     <p>梅赛德斯看着前方，但并没有焦虑。</p>
     <p>目前最大的威胁是作为父亲的伯恩哈特,不过，至少在奴隶的庇护下的时候没正经事。</p>
@@ -68,12 +68,12 @@
     <p>……不安因素，不老期早的阶段来了的事吗？</p>
     <p>只有这个是运气,不过，我想如果可能二十岁左右希望来。</p>
     <p>变得像汉娜一样的话就无法目睹了。</p>
-    <p>“话是这么说，梅赛德斯呀。</p>
-    <p>你有没有考虑过天才同年级的凡才心情呢？</p>
-    <p>那可不是悲惨的东西。无论做什么都相形见绌，让人知道绝对不能与之匹敌……。</p>
-    <p>你想让同学们有这样的想法吗？</p>
-    <p>“我不想让你做。但是，我也不想让。</p>
-    <p>而且，不管我去哪里都会有那样的人吧。如果介意的话什么也做不了”</p>
+    <p>“<span class="character">话是这么说，梅赛德斯呀。</span></p>
+    <p><span class="character">你有没有考虑过天才同年级的凡才心情呢？</span></p>
+    <p><span class="character">那可不是悲惨的东西。无论做什么都相形见绌，让人知道绝对不能与之匹敌……。</span></p>
+    <p><span class="character">你想让同学们有这样的想法吗？</span></p>
+    <p>“<span class="character">我不想让你做。但是，我也不想让。</span></p>
+    <p><span class="character">而且，不管我去哪里都会有那样的人吧。如果介意的话什么也做不了</span>”</p>
     <p>“<span class="character">……</span>”</p>
     <p>对于梅赛德斯来说，别人是无所谓的。</p>
     <p>如果嫉妒的话，随便嫉妒就好，如果拖后腿的话只会毁掉而已。</p>
