--- a/OEBPS/Text/c052.xhtml
+++ b/OEBPS/Text/c052.xhtml
@@ -15,8 +15,8 @@
     <p>埃德尔罗特学院除了前期末一次，后期末结束也有一次长假。</p>
     <p>一年两次的这个假期被定为十六日，如果那个结束再返回到在学园的生活。</p>
     <p>作为梅赛德斯，我并没有回家的意思，本想在学园里自习一下，可是家里来了一辆迎接我的马车，所以不得不回去了。</p>
-    <p>虽然可以无视，但是韩娜对我说“菲利克斯的肩膀变窄了，你回去吧”，所以我不情愿的跟着。</p>
-    <p>菲利克斯说“这是第一次接人”。</p>
+    <p>虽然可以无视，但是汉娜对我说“<span class="character">菲利克斯的肩膀变窄了，你回去吧</span>”，所以我不情愿的跟着。</p>
+    <p>菲利克斯说“<span class="character">这是第一次接人</span>”。</p>
     <p>也就是说，这辆马车来接我的是梅赛德斯，尽管如此，重要的梅赛德斯却没有乘坐，只乘坐菲利克斯回去的话，那岂止是丢脸。</p>
     <p>“<span class="character">姐姐，你回来啦！</span>”</p>
     <p>回到屋子里，玛吉特跑过来了。</p>
@@ -36,14 +36,14 @@
     <p>“<span class="character">欢迎回来，姐姐大人</span>”</p>
     <p>“<span class="character">……啊，嗯。我回来了</span>”</p>
     <p>妹妹还是一如既往的行动和思考都无法读懂。</p>
-    <p>梅赛德斯放下玛吉特，前往作为母亲的鲁迪亚前。</p>
+    <p>梅赛德斯放下玛吉特，前往作为母亲的琉迪亚前。</p>
     <p>她的血色比以前好多了，也许是心理作用吧，变得光彩夺目。</p>
     <p>原本就是很有魅力的女性。只要好好地摄取营养，就会变成这样谁都会回头的美女。</p>
     <p>“<span class="character">你回来了，梅尔。学园里的事，让我听听吧</span>”</p>
     <p>“<span class="character">是，母亲</span>”</p>
     <p>虽然梅赛德斯的语言很冷淡，但是母亲也知道她是那样的女儿，所以什么也不说。</p>
     <p>只是用笑容迎接回来的女儿。</p>
-    <p>跑过那样的她的旁边，桃色的头发的女性ferixu抱住了。</p>
+    <p>跑过那样的她的旁边，桃色的头发的女性把菲利克斯抱住了。</p>
     <p>“<span class="character">欢迎回来，我的菲利克斯！有没有受伤？在学园没有被欺负吗？</span>”</p>
     <p>“<span class="character">嗯，母亲……我回来了</span>”</p>
     <p>菲利克斯的母亲。</p>
@@ -66,8 +66,8 @@
     <p>首先是一天的开始晚餐。</p>
     <p>日落开始，作为吸血鬼的时间的夜晚来到的这个时间带用其他的法鲁什说的地方的早饭。</p>
     <p>接着是对吸血鬼来说最容易活动的深夜摄取的夜宵。</p>
-    <p>这是其他法尔什的午餐。</p>
-    <p>最后一天结束的正餐。主要在凌晨时段，相当于其他法尔什的晚餐。</p>
+    <p>这是其他法鲁什的午餐。</p>
+    <p>最后一天结束的正餐。主要在凌晨时段，相当于其他法鲁什的晚餐。</p>
     <p>与明亮的时候行动的法鲁什没有深夜食同样，吸血鬼没有早餐。</p>
     <p>因为对于吸血鬼来说，早晨和其他法鲁什相比就如同深夜一般。</p>
     <p>据说当天的正餐晚餐全家一起吃，在格鲁内瓦特家成为了新奇的情况。</p>
@@ -108,16 +108,16 @@
     <p>也就是说，女性继承人之类的，即使有例外，也是不可能的。</p>
     <p>这里最可怜的是男兄弟却完全被忽略的戈特弗里特。</p>
     <p>但本人却默默地吃着料理，没有听别人说话。</p>
-    <p>“嗯。别人怎么想？</p>
-    <p>“我赞成瓦尔堡加夫人。如果没有男孩的话姑且不论，这所房子里有一个名叫菲利克斯大哥的优秀长子，能力上也不会有什么不足。</p>
-    <p>那么应该让哥哥继承家业。传统和规矩在贵族社会中受到重视。如果没有意义的破坏，家名就会受伤吧。必须遵守有规格的传统”</p>
+    <p>“<span class="character">嗯。别人怎么想？</span>”</p>
+    <p>“<span class="character">我赞成瓦尔堡加夫人。如果没有男孩的话姑且不论，这所房子里有一个名叫菲利克斯大哥的优秀长子，能力上也不会有什么不足。</span></p>
+    <p><span class="character">那么应该让哥哥继承家业。传统和规矩在贵族社会中受到重视。如果没有意义的破坏，家名就会受伤吧。必须遵守有规格的传统</span>”</p>
     <p>梅赛德斯赞同夫人的意见，将家督强加给菲利克斯。</p>
     <p>自己是女人，在贵族社会中，女人继承家督，是违背传统的，存在着令人感激的缺点。</p>
     <p>那么，没有办法不主张这个了。</p>
     <p>必须遵守有规格的传统……这是连有名的某小说的旁若无人被知道的邪恶的帝王也遵守的事。</p>
-    <p>“嘛，我也是，梅尔这么说的话就没意见了。菲利克斯不是很好吗？</p>
-    <p>这个孩子，就算没有继承家业也能继续下去。</p>
-    <p>啊，但是这种情况下舒夫要和梅尔一起从宅邸里消失了”</p>
+    <p>“<span class="character">嘛，我也是，梅尔这么说的话就没意见了。菲利克斯不是很好吗？</span></p>
+    <p><span class="character">这个孩子，就算没有继承家业也能继续下去。</span></p>
+    <p><span class="character">啊，但是这种情况下舒夫要和梅尔一起从宅邸里消失了</span>”</p>
     <p>琉迪亚好像也赞成菲利克斯的继承人。</p>
     <p>不过，这只是因为女儿赞成而已的适当赞同。</p>
     <p>但是其他……特别是戈特弗里特的母亲坚决反对，在这里出现了菲利克斯派和反对派。</p>
