--- a/OEBPS/Text/c053.xhtml
+++ b/OEBPS/Text/c053.xhtml
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <h1>53. プラクティスダンジョン</h1>　学園も屋敷もドロドロしている貴族社会に若干うんざりした梅赛德斯が向かった先は、実に久しぶりとなるseekerギルドであった。
-
+    <h1>53. プラクティスダンジョン</h1>
+    <p>学園も屋敷もドロドロしている貴族社会に若干うんざりした梅赛德斯が向かった先は、実に久しぶりとなるseekerギルドであった。</p>
     <p>梅赛德斯がギルドに入ると荒くれ達の野獣のような視線が彼女を射抜く。</p>
     <p>互いが互いを商売敵と見做し、自分達以外は信じないと初手にして無言で明かされるこのピリピリとした感じが梅赛德斯は気に入っていた。</p>
     <p>笑顔で近付き、親しい隣人の仮面を張り付けて裏でドロドロとしている貴族社会にはない、荒くれだからこそのサッパリとした敵意がここにはある。</p>
@@ -31,17 +31,19 @@
     <p>この技術はかつてダンジョンより宝を持ち帰ったという伝説のseeker『イーシャ・テンセ』が齎したものだ。</p>
     <p>梅赛德斯は指を切り、カードに血を垂らす。</p>
     <p>するとそこに、今の梅赛德斯の能力が記載された。</p>
-    <p>【梅赛德斯・カルヴァート】</p>
-    <p>seekerランク：C</p>
-    <p>第一属性：土</p>
-    <p>第二属性：風</p>
-    <p>腕力：level　５</p>
-    <p>脚力：level　５</p>
-    <p>耐久：level　５</p>
-    <p>体力：level　５</p>
-    <p>魔力：level　３</p>
-    <p>瞬発：level　５</p>
-    <p>再生：level　６</p>
+    <div class="charactercard">
+        <p class="card name">【梅赛德斯・卡尔瓦特】</p>
+        <p class="card">seeker级别：C</p>
+        <p class="card attributes">第一属性：土</p>
+        <p class="card attributes">第二属性：風</p>
+        <p class="card">腕力：level 5</p>
+        <p class="card">脚力：level 5</p>
+        <p class="card">耐久：level 5</p>
+        <p class="card">体力：level 5</p>
+        <p class="card">魔力：level 3</p>
+        <p class="card">瞬発：level 5</p>
+        <p class="card">再生：level 6</p>
+    </div>
     <p>“<span class="character">うわあ、何か上昇してるし……</span>”</p>
     <p>記された能力に受付は青い顔をしているが、やはり一桁だと凄いのかどうかいまいち伝わらない。</p>
     <p>梅赛德斯としてはむしろ思ったよりも伸びていない事に驚いたくらいだ。</p>
@@ -65,14 +67,14 @@
     <p>“<span class="character">これを受けよう</span>”</p>
     <p>“<span class="character">オークね。まあ貴方なら問題ないでしょうけど、一応オークに関しての注意事項聞いておく？</span>”</p>
     <p>“<span class="character">聞こうか</span>”</p>
-    <p>“はいはい。オークは大体１ｍ半から、大きい個体ならば２ｍくらいのサイズの二足歩行の豚よ。</p>
-    <p>厚い脂肪を蓄えていて、炎や冷気などの魔法攻撃に耐性があり、力も強いからエルフェが苦手としているらしいわ。</p>
-    <p>まあ吸血鬼私らにとっちゃ、ただの鈍間な肉だけどね”</p>
+    <p>“<span class="character">はいはい。オークは大体１ｍ半から、大きい個体ならば２ｍくらいのサイズの二足歩行の豚よ。</span></p>
+    <p><span class="character">厚い脂肪を蓄えていて、炎や冷気などの魔法攻撃に耐性があり、力も強いからエルフェが苦手としているらしいわ。</span></p>
+    <p><span class="character">まあ吸血鬼私らにとっちゃ、ただの鈍間な肉だけどね</span>”</p>
     <p>オークと言えばファンタジーでは大体魔法に弱い脳筋なイメージがあったが、むしろ魔法には強いらしい。</p>
     <p>半面、動きが遅く肉は柔らかいので斬撃には滅法弱いようだ。</p>
     <p>つまり梅赛德斯の敵ではないだろう。</p>
-    <p>“それと、プラクティスダンジョンは少し特殊なダンジョンでね。</p>
-    <p>全十五階層なんだけど、最下層にお宝はない・・・・・わ。完全にそこで行き止まりよ”</p>
+    <p>“<span class="character">それと、プラクティスダンジョンは少し特殊なダンジョンでね。</span></p>
+    <p><span class="character">全十五階層なんだけど、最下層にお宝はない・・・・・わ。完全にそこで行き止まりよ</span>”</p>
     <p>“<span class="character">……行き止まり？</span>”</p>
     <p>“<span class="character">そ。最下層にはボスがいて、ちょっと豪華な武器か防具を持っているから、あえて言うならそれがお宝ね</span>”</p>
     <p>それはおかしい、と梅赛德斯は疑問に思った。</p>
