--- a/OEBPS/Text/c055.xhtml
+++ b/OEBPS/Text/c055.xhtml
@@ -17,9 +17,9 @@
     <p>稍稍驼背以二足步行站立，全身绿色的鳞被覆盖。</p>
     <p>从龙的角度来考虑的话，应该是相当小型的吧。</p>
     <br>
-    <p>“当地识别名，小龙。</p>
-    <p>龙种中属于弱部类，但是拥有咬断大树的咬肌力和使大树成为可能的牙齿，如果是猪人程度的话可以两断的爪子，全身的鳞片如果只是铁剑程度的话会反弹，从口中吐出1000℃的火焰。</p>
-    <p>对于初学者来说可以说是比较严厉的对手吧”</p>
+    <p>“<span class="character">当地识别名，小龙。</span></p>
+    <p><span class="character">龙种中属于弱部类，但是拥有咬断大树的咬肌力和使大树成为可能的牙齿，如果是猪人程度的话可以两断的爪子，全身的鳞片如果只是铁剑程度的话会反弹，从口中吐出1000℃的火焰。</span></p>
+    <p><span class="character">对于初学者来说可以说是比较严厉的对手吧</span>”</p>
     <p>“<span class="character">嗯……话说回来，名字好像和奥尔克斯这边的语言体系有些不同？</span>”</p>
     <p>“<span class="character">要推测的话，最初发现并命名的不是吸血鬼以外的种族吗？</span>”</p>
     <br>
@@ -64,7 +64,7 @@
     <p>明明是龙却装备了什么。</p>
     <p>这么说来，接待处好像也说这里的BOSS有一些豪华的装备。</p>
     <br>
-    <p>《嗯。看来使用火焰的时候有提高火力的效果”</p>
+    <p>《<span class="character">嗯。看来使用火焰的时候有提高火力的效果</span>》</p>
     <p>“<span class="character">是火属性的支持吗？对我来说不会用啊</span>”</p>
     <br>
     <p>此次的宝物是火属性用的辅助器具,不过，梅赛德斯的属性是风和地。用不着。</p>
