--- a/OEBPS/Text/c056.xhtml
+++ b/OEBPS/Text/c056.xhtml
@@ -91,22 +91,22 @@
     <p>伯恩哈特带着被拘留的小偷在迷宫内散步。</p>
     <p>真是奇妙的光景。</p>
     <p>迷宫内的魔物都不会对伯恩哈特发动攻击，甚至有人会主动承担起牵引野盗的任务。</p>
-    <p>“哦……原来如此？有人一口气跑到十五层。</p>
-    <p>也有相当有手臂的贴纸呢。也许能用。</p>
-    <p>告诉我那家伙的特点。根据情况拉出。</p>
-    <p>嗯，那个家伙带着魔物……哎呀哎呀，那难道不是青头发的小女孩吗？”</p>
+    <p>“<span class="character">哦……原来如此？有人一口气跑到十五层。</span></p>
+    <p><span class="character">也有相当有手臂的seeker呢。也许能用。</span></p>
+    <p><span class="character">告诉我那家伙的特点。根据情况拉出。</span></p>
+    <p><span class="character">嗯，那个家伙带着魔物……哎呀哎呀，那难道不是青头发的小女孩吗？</span>”</p>
     <p>在野盗们身上，伯恩哈特看起来很可怕。</p>
     <p>反正谁都不在，一个人在说话。</p>
     <p>只能认为变得可笑。</p>
     <p>但是，伯恩哈特却像有人看不见一样认真地回答着。</p>
-    <p>“ククク……果然如此。真是让人头疼的家伙。</p>
-    <p>如果不知道的话也不是不可能的，但是这种程度的迷宫是无法试探的。</p>
-    <p>是啊……喂。接着是梅赛德斯……啊，对了，就是那个小姑娘的名字。</p>
-    <p>那个家伙来了的话，就解放到十八层吧。</p>
-    <p>没问题。对他来说，这只是一次很好的训练。</p>
-    <p>虽然要花费成本，但相应的费用是……”</p>
+    <p>“<span class="character">ククク……果然如此。真是让人头疼的家伙。</span></p>
+    <p><span class="character">如果不知道的话也不是不可能的，但是这种程度的迷宫是无法试探的。</span></p>
+    <p><span class="character">是啊……喂。接着是梅赛德斯……啊，对了，就是那个小姑娘的名字。</span></p>
+    <p><span class="character">那个家伙来了的话，就解放到十八层吧。</span></p>
+    <p><span class="character">没问题。对她来说，这只是一次很好的训练。</span></p>
+    <p><span class="character">虽然要花费成本，但相应的费用是……</span>”</p>
     <p>伯恩哈特说到这儿，看见了野盗。</p>
-    <p>我目光冰冷。</p>
+    <p>目光冰冷。</p>
     <p>大致，是象向(以)同样的吸血鬼一样的眼不认为，无机物也象看一样的视线。</p>
     <p>“<span class="character">让他们付钱吧</span>”</p>
     <p>小偷们确信了。</p>
