--- a/OEBPS/Text/c057.xhtml
+++ b/OEBPS/Text/c057.xhtml
@@ -21,20 +21,20 @@
     <p>作为一年的总结，这个学园在大厅里举行了集合学生们的毕业典礼。</p>
     <p>在台上讲述了这个学园之长的fredelic。</p>
     <p>他依旧摇摇晃晃地说着好多话。</p>
-    <p>“一年过去孩子们会长大，一年过去就会老。</p>
-    <p>我也想快点长大，和大家一样大。</p>
-    <p>还开玩笑了早期迎来不老期的同学。</p>
-    <p>可是现在羡慕那个同学，人生不明白的东西。</p>
-    <p>好吧，年轻的时间是有限的。不抱不老期到来之类的幻想，好好记住现在的有活力的自己就好。总有一天，会有几个学生和我一样陷入绝望”</p>
+    <p>“<span class="character">一年过去孩子们会长大，一年过去就会老。</span></p>
+    <p><span class="character">我也想快点长大，和大家一样大。</span></p>
+    <p><span class="character">还开玩笑了早期迎来不老期的同学。</span></p>
+    <p><span class="character">可是现在羡慕那个同学，人生不明白的东西。</span></p>
+    <p><span class="character">好吧，年轻的时间是有限的。不抱不老期到来之类的幻想，好好记住现在的有活力的自己就好。总有一天，会有几个学生和我一样陷入绝望</span>”</p>
     <p>然后话题一转眼就脱轨了，走向了与毕业典礼和学业完全无关的方向。</p>
     <p>虽然讨厌在幼小的状态下迎来不老期，但更讨厌成为老人之后的不老期。</p>
     <p>虽说是吸血鬼，但也不能保证年轻。</p>
     <p>虽然是很低的概率，但确实也有像他那样的人。</p>
-    <p>“根据一种说法，不老期的来访会左右孩子是否能生育。</p>
-    <p>不老期是为孩子准备大量的年轻时间的机构，因此如果生了孩子就不需要衰老。所以说长生不老也不来。</p>
-    <p>更简单地说就是【床单】！”是不是做了？</p>
-    <p>那么姑且不论女子，男子的身体方面没有判断的方法。总之，要看是否释放了【谜一般的白色液体】而被判断。也就是说，“一只手是恋人”离不老期越远。</p>
-    <p>我也年轻的时候下半身精力充沛，因为长得帅，年轻的女孩子也聚集了过来。我每天玩得迷迷糊糊的。女孩子呢……”</p>
+    <p>“<span class="character">根据一种说法，不老期的来访会左右孩子是否能生育。</span></p>
+    <p><span class="character">不老期是为孩子准备大量的年轻时间的机构，因此如果生了孩子就不需要衰老。所以说长生不老也不来。</p>
+    <p>更简单地说就是【床单】！”是不是做了？</span></p>
+    <p><span class="character">那么姑且不论女子，男子的身体方面没有判断的方法。总之，要看是否释放了【谜一般的白色液体】而被判断。也就是说，“一只手是恋人”离不老期越远。</span></p>
+    <p><span class="character">我也年轻的时候下半身精力充沛，因为长得帅，年轻的女孩子也聚集了过来。我每天玩得迷迷糊糊的。女孩子呢……</span>”</p>
     <p>“<span class="character">喂，谁来阻止那个老糊涂！”停止，停止！</span>”</p>
     <p>“<span class="character">把那个**拖下去！</span>”</p>
     <p>话终于发展到黄段子了，其他的教师也雪崩带去了校长。</p>
@@ -70,13 +70,13 @@
     <p>哥布林赫克斯是擅长魔法的哥布林，梅赛德斯所拥有的迷宫里没有比这更精通魔法的魔物。</p>
     <p>不管怎么说，这个迷宫尽是接近战斗的魔物。</p>
     <p>因为操纵火的魔物等也有本能处理的部分教师角色快要能了的魔物这个以外不在了。</p>
-    <p>“噗噜噗噜。魔法是自己心中的玛娜给予命令外出，请外边的玛娜呼吁能种种的事的方法的事哟。</p>
-    <p>世界这种东西大致来说都是马纳的，说是推动世界的力量也不过分”</p>
+    <p>“<span class="character">噗噜噗噜。魔法是自己心中的玛娜给予命令外出，请外边的玛娜呼吁能种种的事的方法的事哟。</span></p>
+    <p><span class="character">世界这种东西大致来说都是马纳的，说是推动世界的力量也不过分</span>”</p>
     <p>果冻用稍微阴郁的语调翻译哥布林赫克萨一边说一边解说。</p>
     <p>即使那样，从作为空想定一对的被打败角色的goburin教东西的日到没认为。</p>
     <p>前世看到的幻想作品中，也有不断狩猎蟑螂的主人公。</p>
-    <p>“在自己的属性相同的地方冥想的话就能使用魔法，是因为能感觉记住构成必要的魔法的玛娜的排列。</p>
-    <p>但是好像不清楚为什么每个生物只能得到四个属性。不可思议啊！”</p>
+    <p>“<span class="character">在自己的属性相同的地方冥想的话就能使用魔法，是因为能感觉记住构成必要的魔法的玛娜的排列。</span></p>
+    <p><span class="character">但是好像不清楚为什么每个生物只能得到四个属性。不可思议啊！</span>”</p>
     <p>总而言之，魔法到底能让我们听到在外面的玛娜说的话有多好。哥布林赫克斯说。</p>
     <p>根据个人不同其命令的力量有差异，他们称之为魔力。</p>
     <p>所谓魔法力，包含着多少可以用于命令的礼仪呢……并且能内涵的界限量是多少？</p>
