--- a/OEBPS/Text/c058.xhtml
+++ b/OEBPS/Text/c058.xhtml
@@ -26,15 +26,15 @@
     <p>也许还是不适合做荒唐事。</p>
     <p>虽说如此，入学是入学。晚点从现在开始挽回就行了吧。</p>
     <p class="divline"></p>
-    <p>“下个月的实技将去远征邻镇。</p>
-    <p>将来，要有远行的机会是不会再来的。</p>
-    <p>如果成为seeker的话，会去探索秘境的。在迷宫里也要注意食物和体力的分配。</p>
-    <p>如果成为领主，作为义务有时会去讨伐野盗和魔物。</p>
-    <p>商人等都是命根子。好几次从街上走到街上。</p>
-    <p>因此，这次，请通过我们决定的路线到邻镇去。</p>
-    <p>因为要预先给全体人员资金，使用那个自己选必要的东西，考虑，准备。</p>
-    <p>如果必要的话，也承认和同伴商量的事。</p>
-    <p>但是，这次禁止带入用这些资金获得以外的食物和物资”</p>
+    <p>“<span class="character">下个月的实技将去远征邻镇。</span></p>
+    <p><span class="character">将来，要有远行的机会是不会再来的。</span></p>
+    <p><span class="character">如果成为seeker的话，会去探索秘境的。在迷宫里也要注意食物和体力的分配。</span></p>
+    <p><span class="character">如果成为领主，作为义务有时会去讨伐野盗和魔物。</span></p>
+    <p><span class="character">商人等都是命根子。好几次从街上走到街上。</span></p>
+    <p><span class="character">因此，这次，请通过我们决定的路线到邻镇去。</span></p>
+    <p><span class="character">因为要预先给全体人员资金，使用那个自己选必要的东西，考虑，准备。</span></p>
+    <p><span class="character">如果必要的话，也承认和同伴商量的事。</span></p>
+    <p><span class="character">但是，这次禁止带入用这些资金获得以外的食物和物资</span>”</p>
     <p>成为二年级的第一个实际技巧好像是远行的练习。</p>
     <p>正如古斯塔夫所说，在这个世界上，不管怎样，大部分工作都需要用脚。</p>
     <p>像地球一样地互联网发达，从自己的家不动能工作这样的事没有。</p>
@@ -44,31 +44,31 @@
     <p>也就是说，在一月期间，选择必要的东西准备好。</p>
     <p>开始远行之前，已经开始上课了。</p>
     <p>恐怕服装和鞋子等也应该由对方指定。</p>
-    <p>“这次的远征设定为‘邻镇被野盗攻入，要求救援’。</p>
-    <p>另外，通常的路线被占据，被迫使用特殊的路线的必要性。</p>
-    <p>从哪个路线去都可以,不过，如果通过正规的街道那时候是失格的。</p>
-    <p>当然要求迅速，但过于优先快速到达，抵达时疲惫不堪，站立时也难以忍受。要好好考虑平衡”</p>
-    <p>“喂，梅赛德斯。你觉得买什么好？</p>
-    <p>说实话，我不太清楚这些”</p>
+    <p>“<span class="character">这次的远征设定为‘邻镇被野盗攻入，要求救援’。</span></p>
+    <p><span class="character">另外，通常的路线被占据，被迫使用特殊的路线的必要性。</span></p>
+    <p><span class="character">从哪个路线去都可以,不过，如果通过正规的街道那时候是失格的。</span></p>
+    <p><span class="character">当然要求迅速，但过于优先快速到达，抵达时疲惫不堪，站立时也难以忍受。要好好考虑平衡</span>”</p>
+    <p>“<span class="character">喂，梅赛德斯。你觉得买什么好？</span></p>
+    <p><span class="character">说实话，我不太清楚这些</span>”</p>
     <p>古斯塔夫的说明结束了，学生们马上开始了关系好的小组们的商量。</p>
     <p>吉克林顿也早早地来到梅赛德斯，想借点智慧。</p>
     <p>汉娜在旁边笑嘻嘻地笑着，但是好像没有要劝告的意思。</p>
     <p>想自力加油吧。</p>
-    <p>“是买成为脚的魔物，还是买齐食物，这都不会改变。</p>
-    <p>我认为资金的使用方法会有差别。</p>
-    <p>如果买快步的魔物的话，仅仅这样资金就差不多用完了，所以食物只能提供最低限度。</p>
-    <p>虽然能很快到达，但已经没有了饥饿的战斗了吧。</p>
-    <p>相反，如果准备了丰富的食物，应该能从容抵达，但是因为到达晚了，所以这次的设定很失败”</p>
+    <p>“<span class="character">是买成为脚的魔物，还是买齐食物，这都不会改变。</span></p>
+    <p><span class="character">我认为资金的使用方法会有差别。</span></p>
+    <p><span class="character">如果买快步的魔物的话，仅仅这样资金就差不多用完了，所以食物只能提供最低限度。</span></p>
+    <p><span class="character">虽然能很快到达，但已经没有了饥饿的战斗了吧。</span></p>
+    <p><span class="character">相反，如果准备了丰富的食物，应该能从容抵达，但是因为到达晚了，所以这次的设定很失败</span>”</p>
     <p>“<span class="character">买能飞的魔物，一口气到邻镇去怎么样？</span>”</p>
-    <p>“这也考虑过了，如果变成可以载着吸血鬼飞行的大小魔物的话，一定相当昂贵吧。</p>
-    <p>我不认为这次的资金够用”</p>
+    <p>“<span class="character">这也考虑过了，如果变成可以载着吸血鬼飞行的大小魔物的话，一定相当昂贵吧。</span></p>
+    <p><span class="character">我不认为这次的资金够用</span>”</p>
     <p>在确保一定程度的速度的同时，也必须保留抵达街道的同时能战斗的体力。</p>
     <p>那个是这次的课题能看见的点。</p>
     <p>光用一定的资金想办法，可以说与一年度相比难易度一下子提高了。</p>
-    <p>“邻镇……到布鲁特的距离乘马车大概只有两天半左右吧。</p>
-    <p>走路的话好像要花两倍呢。</p>
-    <p>即使使魔物跑得快，也需要花费一天的时间，而且有必要买那个魔物份的食物，所以成本很严格。</p>
-    <p>将资金充当魔物购买的话，中途肯定会气喘吁吁的”</p>
+    <p>“<span class="character">邻镇……到布鲁特的距离乘马车大概只有两天半左右吧。</span></p>
+    <p><span class="character">走路的话好像要花两倍呢。</span></p>
+    <p><span class="character">即使使魔物跑得快，也需要花费一天的时间，而且有必要买那个魔物份的食物，所以成本很严格。</span></p>
+    <p><span class="character">将资金充当魔物购买的话，中途肯定会气喘吁吁的</span>”</p>
     <p>吉克林德一边看地图一边拼命地考虑应该怎么做。</p>
     <p>实际上，梅赛德斯想通过这个课题就能简单地通关。</p>
     <p>原本去年多次往返于布鲁特与王都之间。事到如今已是过多的课题。</p>
