--- a/OEBPS/Text/c059.xhtml
+++ b/OEBPS/Text/c059.xhtml
@@ -43,8 +43,8 @@
     <p>经费全部转入保存食品。</p>
     <p>汉娜也同样没有魔物。对脚有自信吧。</p>
     <p>其他Dodo·Liotte也没准备魔物做着伸展运动。</p>
-    <p>“在开始实习之前，要给全体教练带上各自的上级生。</p>
-    <p>放弃的时候跟这些家伙说比较好”</p>
+    <p>“<span class="character">在开始实习之前，要给全体教练带上各自的上级生。</span></p>
+    <p><span class="character">放弃的时候跟这些家伙说比较好</span>”</p>
     <p>古斯塔夫这么一说，索隆和高年级生来了。</p>
     <p>真不愧是不会模仿下级生一个人送出去。这是理所当然的对应。</p>
     <p>其中还有菲利克斯、《浓雾》派系领袖哈特曼、汉娜的儿子们。</p>
@@ -66,11 +66,11 @@
     <p>但是，梅赛德斯并不想绕路，决定笔直地爬上这座岩山。</p>
     <p>从岩石到岩石轻快地跳跃的梅赛德斯，扮演监督的哈特曼喘着气跟了过来。</p>
     <p>不愧是汉娜的学生，身段真好。好像不是单纯的波恩。</p>
-    <p>“喂，喂……你那么一飞，后面可要紧的！</p>
-    <p>所以，稍微休息一下怎么样！”</p>
+    <p>“<span class="character">喂，喂……你那么一飞，后面可要紧的！</span></p>
+    <p><span class="character">所以，稍微休息一下怎么样！</span>”</p>
     <p>“<span class="character">还很从容</span>”</p>
-    <p>“现在是……泽泽……即使很充裕，后面……哈、哈……你说很累！</p>
-    <p>呀，休……呵呵……我觉得还是休息一下比较好！”</p>
+    <p>“<span class="character">现在是……泽泽……即使很充裕，后面……哈、哈……你说很累！</span></p>
+    <p><span class="character">呀，休……呵呵……我觉得还是休息一下比较好！</span>”</p>
     <p>“<span class="character">累了就休息</span>”</p>
     <p>虽然指示导演早点休息，但这不是他们的工作。</p>
     <p>体力分配和前进的步调，全部都被这边一任。他们的职责，只是守护着而已。</p>
@@ -89,11 +89,11 @@
     <p>一个是不测的事态……譬如遭遇了野盗，与魔物遭遇了对下级生不能处理的事态预备的事。</p>
     <p>一个是放弃的受理。在判断学生已经不可能的时候，马上救助也是导演的工作。</p>
     <p>然后最后是评价。看学生的行动，记录那个判断力等也是监督角色的工作。</p>
-    <p>从菲利克斯的角度来看，目前的吉林登是非常优秀的。</p>
+    <p>从菲利克斯的角度来看，目前的吉克林德是非常优秀的。</p>
     <p>选择路线也不错，毫无疑问会进入上位吧。</p>
     <p>比什么都出色的，做着自己的理解波及的范围的行动吗？</p>
     <p>（梅赛德斯刚才朝着岩山方向去了……难道你想过那里吗？</p>
-    <p>但是如果是梅赛德斯，应该会理所当然地跑完吧。哈特曼也不走运）</p>
+    <p>但是如果是梅赛德斯，应该会理所当然地跑完吧。哈特曼也真是不走运）</p>
     <p>妹妹还是一如既往地做着奇怪的事，刚才一闪一闪地突击着岩山。</p>
     <p>而且连魔物都没使用。打算完全靠自己的双脚前进。</p>
     <p>这次，没有准备移动用魔物的学生只有三人。</p>
