--- a/OEBPS/Text/c060.xhtml
+++ b/OEBPS/Text/c060.xhtml
@@ -83,8 +83,8 @@
     <p>的确，任何时候都应该冷静，但校长不能说这是冷静的。</p>
     <p>只是浪费时间。</p>
     <p>冷静和什么也不想是两码事。</p>
-    <p>“最近有好的茶叶进来了。慢慢来就好。</p>
-    <p>喂，我来泡吧”</p>
+    <p>“<span class="character">最近有好的茶叶进来了。慢慢来就好。</span></p>
+    <p><span class="character">喂，我来泡吧</span>”</p>
     <p>“<span class="character">校长！听了我的话了吗！？</span>”</p>
     <p>“<span class="character">嗯，我在听。当敌国的追赶者逼近的时候……那可不得了。糟糕、糟糕……</span>”</p>
     <p>虽然嘴上说很辛苦，但还是没有表现出要动的样子。</p>
@@ -104,9 +104,9 @@
     <p>但是重要的不是那里。</p>
     <p>为什么打扰你呢……重要的是那里。</p>
     <p>“<span class="character">你打算干什么，校长……</span>”</p>
-    <p>“这是我从前在秘境旅行时发现的植物啊……。</p>
-    <p>不可思议的是，这种植物会在一瞬间成长，又变回种子。</p>
-    <p>或许，是一种魔物。我常年的研究找到了自由控制的方法”</p>
+    <p>“<span class="character">这是我从前在秘境旅行时发现的植物啊……。</span></p>
+    <p><span class="character">不可思议的是，这种植物会在一瞬间成长，又变回种子。</span></p>
+    <p><span class="character">或许，是一种魔物。我常年的研究找到了自由控制的方法</span>”</p>
     <p>“<span class="character">我没听说过这样的事！我在问为什么要打扰我！</span>”</p>
     <p>“<span class="character">嗯，为什么……不知为什么……哎呀，为什么呢……</span>”</p>
     <p>突然，一边笑着，弗雷德里克一边回避着菲利克斯的话。</p>
@@ -130,8 +130,8 @@
     <p>判断力并不差。头也某种程度断，内心已经想弗里德里克与敌人联手的可能性。</p>
     <p>但是“也许只是真的装傻而已”。“或许是出于某种策略才演的吧”，他这样想着。</p>
     <p>而这正是他致命的弱点。</p>
-    <p>“……蓝色的。时间到了，菲利克斯。</p>
-    <p>把公主交给他们吧”</p>
+    <p>“<span class="character">……蓝色的。时间到了，菲利克斯。</span></p>
+    <p><span class="character">把公主交给他们吧</span>”</p>
     <p>菲利克斯在弗雷德里克告诉他后，确信了弗雷德里克他们是他的敌人。</p>
     <p>*</p>
     <p>任何事都有出乎意料之外的东西。</p>
@@ -169,7 +169,7 @@
     <p>但是，吉克林德马上回答说这是以自己为目标的穿着白衣的行为。</p>
     <p>也就是说……自己的替身汉娜和梅赛德斯的哥哥被抓住了。</p>
     <p>“<span class="character">不行！不能这样做！</span>”</p>
-    <p>吉林登责任感强，正义感强。</p>
+    <p>吉克林德责任感强，正义感强。</p>
     <p>那样的她如果说放置成为了自己的替换的人当然否定，跳上火腿助的话逆跑开始了。</p>
     <p>“<span class="character">火腿助！请告诉我袭击者的地点！</span>”</p>
     <p>“<span class="character">哇哦哦哦哦哦哦哦，去哪里的公主！？</span>”</p>
