--- a/OEBPS/Text/c078.xhtml
+++ b/OEBPS/Text/c078.xhtml
@@ -121,6 +121,6 @@
     <p>在这个世界上，即使是被曲折的人类定义的吸血鬼也能复制。做出来了。</p>
     <p>梅赛德斯不得不对这个事实感到厌恶。</p>
     <p>我不能不怀疑其中的一个疑惑。</p>
-    <p>——法尔什真的是人类吗？</p>
+    <p>——法鲁什真的是人类吗？</p>
     <p>（我们是……或许在这个世界生存的全部……原来说不定是从迷宫中诞生的魔物呢……）</p>
 </body>
