--- a/OEBPS/Text/c084.xhtml
+++ b/OEBPS/Text/c084.xhtml
@@ -17,9 +17,9 @@
     <p>突然采取跟踪之类手段也很可疑，凑齐数量围在这里做着事也太可疑了。</p>
     <p>结果，最后竟然说出了真正的王，叫他放心是不可能的。</p>
     <p>你没有注意到梅赛德斯的想法吗……有头绪的男人笑嘻嘻地开始说话。</p>
-    <p>“梅赛德斯大人。你知道王剑这个东西吧，首先这个说明省略。</p>
-    <p>如果先说结论，我们才是真正的王者，继承了最新的‘攻略者’之血的正当王者”</p>
-    <p>“……哦？</p>
+    <p>“<span class="character">梅赛德斯大人。你知道王剑这个东西吧，首先这个说明省略。</span></p>
+    <p><span class="character">如果先说结论，我们才是真正的王者，继承了最新的‘攻略者’之血的正当王者</span>”</p>
+    <p>“<span class="character">……哦？</span></p>
     <p>据梅赛德斯所知，最新的攻略者正是梅赛德斯本人。</p>
     <p>但是对方好像没有把握那个。这暂且不提，攻略者的血统还是很吸引人的。</p>
     <p>因为还看不到对方的目标和思想，所以只能看情况……如果是个不三不四的家伙倒是方便。</p>
@@ -114,6 +114,7 @@
     <p>“知道了，去看看吧。</p>
     <p>要知道你们的话是不是真的，那是最简便的”</p>
     <p>所以在这里，我决定先跟随这伙人。</p>
+    <p class="divline"></p>
     <p>【因为稍微有点麻烦，所以用王关联的方式复习】</p>
     <p>・出境巡回演出</p>
     <p>吉克林登的祖父。不受男孩子的恩惠作为女儿的婿迎接了伊扎克的人的眼睛没有的男人。</p>
