--- a/OEBPS/Text/c085.xhtml
+++ b/OEBPS/Text/c085.xhtml
@@ -57,13 +57,13 @@
     <p>从士兵们那里完全感觉不到生气，一点动也不动。</p>
     <p>恐怕这也是某种魔物吧。</p>
     <p>我这样想着就问了下zwölf，他马上回答了。</p>
-    <p>“制造编号799。正式名称P-001。当地识别名、游戏内裤。</p>
+    <p>《制造编号799。正式名称P-001。当地识别名、游戏内裤。</p>
     <p>掌管的属性是“铁”单一。</p>
     <p>在裤衩种中最战力劣于其他的种子防御力优秀。</p>
     <p>是P类型的先行试作体，成为P类型全部的基本。</p>
     <p>虽然没有特殊的能力，但是成本方面很优秀，主要是假想集团战斗而制造的。</p>
     <p>战斗能力是装甲的士兵一人份，这是平均的吸血鬼成年男子的六成左右的战力。</p>
-    <p>和果冻种子一样，铠甲中存在核武器，核武器破坏，四肢破坏之前不会停止活动”</p>
+    <p>和果冻种子一样，铠甲中存在核武器，核武器破坏，四肢破坏之前不会停止活动》</p>
     <p>感觉信息比以前多了一点。</p>
     <p>制造号码啦，正式名称啦恐怕是人类取了的名字吧。</p>
     <p>当地的识别名是吸血鬼取的名字，恐怕去别的国家名字也会不一样。</p>
@@ -121,7 +121,7 @@
     <p>自己究竟在做什么，甚至连自称是多么危险的名字都感觉不到。</p>
     <p>这样的话，问题还是罗勒一方吧。</p>
     <p>果然，有头绪的男人中没有像样的人。梅赛德斯再次这么想。</p>
-    
+    <p class="divline"></p>
     <p>【吉他果冻】</p>
     <p>原本是坏·果冻的果冻，由于过度锻炼而迷失了原型。</p>
     <p>身高延伸到接近2米，肌肉分泌过多的肌肉果冻，乍一看也显得肥胖。</p>
