--- a/OEBPS/Text/c086.xhtml
+++ b/OEBPS/Text/c086.xhtml
@@ -65,7 +65,7 @@
     <p>年龄已经到了帮父母干活的年龄，也有人已经开始工作了。</p>
     <p>即使有未婚妻也不稀奇吧。</p>
     <p>虽然这无疑是孩子，但由于文化的差异，要求他们比日本早日独立。</p>
-    <p>虽然这是和本题完全没有关系的闲话，但当时对吉林登是女生的事感到震惊的德德·里奥特现在正燃烧着新的恋情。</p>
+    <p>虽然这是和本题完全没有关系的闲话，但当时对吉克林德是女生的事感到震惊的德德·里奥特现在正燃烧着新的恋情。</p>
     <p>这次的目标是稍微有点不幸的金发美男子，好像是公爵家的儿子。</p>
     <p>咦？这不是菲利克斯吗？</p>
     <p>那个姑且不论，麦克斯恐怕与吉克林德相反。</p>
