--- a/OEBPS/Text/c096.xhtml
+++ b/OEBPS/Text/c096.xhtml
@@ -56,11 +56,11 @@
     <p>商量和推理都过后。在这种事情之间被夺走本命是很不像话的。</p>
     <p>所以首先应该和吉克林德汇合，然后再考虑吧。</p>
     <p>汉娜也赞成那个意见，首先二人突击吉克林德的房间确认了她的平安。</p>
-    <p>突然从梦境中被打醒的吉林登还划着船，但总之没有被诱拐为好。</p>
+    <p>突然从梦境中被打醒的吉克林德还划着船，但总之没有被诱拐为好。</p>
     <p>汉娜的部下好像也已经安置好了，虽然没有身影，但是到处都能感受到他的气息。</p>
     <p>顺便说一下，潜藏在房间里的隐密兵都是女性。男人在外面。</p>
     <p>“<span class="character">嗯……？怎么了，两个人一起……还是早上呢……</span>”</p>
-    <p>吉林登也许是起得太弱了吧，眼睛长得溜圆的。</p>
+    <p>吉克林德也许是起得太弱了吧，眼睛长得溜圆的。</p>
     <p>而且在Negurije下面什么都没穿，这里有男人的话确实成为了眼毒吧。</p>
     <p>再生能力和强度优秀的吸血鬼基本上不会下垂，因此很多女性讨厌睡觉时被束缚的感觉，什么都不能穿。</p>
     <p>这样看来，以前是男装的，真让人吃惊。</p>
@@ -84,15 +84,15 @@
     <p>“<span class="character">但是只有我被守护着，在这期间无视大家的痛苦……</span>”</p>
     <p>“<span class="character">请忍耐一下</span>”</p>
     <p>尚也招募的jikurindehana用一句话扔掉了。</p>
-    <p>不管敌人的目标是什么，只有让吉林登突击这样的选择。</p>
+    <p>不管敌人的目标是什么，只有让吉克林德突击这样的选择。</p>
     <p>公主自己战斗，在游戏中就足够了。</p>
     <p>希望公主能像公主一样守护着。</p>
     <p>她的工作不是牺牲自己来保护人民。</p>
     <p>那是骑士和士兵的工作。</p>
     <p>吉林德的工作就是即使牺牲人民也要平安无事。</p>
     <p>“<span class="character">你觉得敌人的目标是什么？</span>”</p>
-    <p>“是诱发我们薄弱地保护吉林登，还是专心致志地保护吉林登，淡化了王都的防守……但是，感觉不到真心想要攻陷王都的意思啊。</p>
-    <p>不管怎么说，我们要继续保护吉林登，观察他的样子”</p>
+    <p>“是诱发我们薄弱地保护吉克林德，还是专心致志地保护吉克林德，淡化了王都的防守……但是，感觉不到真心想要攻陷王都的意思啊。</p>
+    <p>不管怎么说，我们要继续保护吉克林德，观察他的样子”</p>
     <p>这次不敢做什么，看透情况。</p>
     <p>汉娜也同意了梅赛德斯的判断。</p>
     <p>我也没想过会抓住从这里出来指挥魔物的人，但恐怕那是徒劳的。</p>
