--- a/OEBPS/Text/c099.xhtml
+++ b/OEBPS/Text/c099.xhtml
@@ -24,7 +24,7 @@
     <p>因为那样做的事象jikurinde执行着一样地显示此次的指挥，想给予她『迅速捉住了袭击了王都的逆贼』的实际成果。</p>
     <p>有了那样的实绩，民众的不满也会有所缓解。</p>
     <p>总之，到吉克林登找到丈夫新王戴冠为止的时间左右能挣吧。</p>
-    <p>话虽如此，但如果吉林登发生万一的事就麻烦了，所以配置在最后。</p>
+    <p>话虽如此，但如果吉克林德发生万一的事就麻烦了，所以配置在最后。</p>
     <p>士兵们筑起墙壁，完全防御着通往基林德的道路。</p>
     <p>更加那个外侧什么与民众聚集，成为防御罗勒们的逃跑的人的墙。</p>
     <p>在他们的注视下，罗勒飞出了储物小屋，以马克斯为中心的魔物们取得了阵形。</p>
