--- a/OEBPS/Text/c100.xhtml
+++ b/OEBPS/Text/c100.xhtml
@@ -97,7 +97,7 @@
     <p>好象腰软了。</p>
     <p>梅赛德斯在梅赛德斯面前像散步一样前进，挥舞着哈尔巴德。</p>
     <p>但梅赛德斯并没有马上挥下刀刃，似乎在等待着什么，看了看周围一眼。</p>
-    <p>然后，终于慢慢地放下刀刃——那个刀刃，被插进去的吉林登的王剑接住了。</p>
+    <p>然后，终于慢慢地放下刀刃——那个刀刃，被插进去的吉克林德的王剑接住了。</p>
     <p>“<span class="character">到此为止了，梅赛德斯……这个少年的待遇由我们来决定。不要无谓的杀生</span>”</p>
     <p>“<span class="character">……</span>”</p>
     <p>终于来了。</p>
@@ -106,8 +106,8 @@
     <p>“<span class="character">诶？啊……嗯！大义啊！之后就交给我了</span>”</p>
     <p>对于和平时不一样的梅赛德斯的态度，吉林顿想起了周围的目光，回答说是公主。</p>
     <p>这样的话，最终吉克林德勒紧了的印象在人们之间蔓延吧。</p>
-    <p>梅赛德斯老老实实地遵从的事显示吉林登的影响力，由于这个梅赛德斯的功绩也成为吉林登的指挥的赏物。</p>
-    <p>吉林登恐怕也注意到了他的功绩被强加于人的事情，但是不能在这里指出来。</p>
+    <p>梅赛德斯老老实实地遵从的事显示吉克林德的影响力，由于这个梅赛德斯的功绩也成为吉克林德的指挥的赏物。</p>
+    <p>吉克林德恐怕也注意到了他的功绩被强加于人的事情，但是不能在这里指出来。</p>
     <p>事后肯定会发很多牢骚，不过这也是没办法的吧。</p>
     <p>梅赛德斯一边看着吉克林德救出人质，拘留麦克斯，一边脱离了人的圈子。</p>
 </body>
