--- a/OEBPS/Text/c105.xhtml
+++ b/OEBPS/Text/c105.xhtml
@@ -98,7 +98,7 @@
     <p>梅赛德斯认为，上面姑且不论，下面调查的人应该不多吧。</p>
     <p>首先，这个迷宫的大前提是向上发展的构造，浮游的道路也能向上前进。</p>
     <p>如果那样掉下来的话，因为是去出发地点所以没有向下目标的好处。</p>
-    <p>如果是平常的话，即使这样，也有以‘这里到底有什么呢’这样的心情进行下面的调查的贴纸吧……此次成为吸血鬼和erufe的哪边先攻略的竞争的形式难吃。</p>
+    <p>如果是平常的话，即使这样，也有以‘这里到底有什么呢’这样的心情进行下面的调查的seeker吧……此次成为吸血鬼和erufe的哪边先攻略的竞争的形式难吃。</p>
     <p>既然不知道对方什么时候会清除迷宫，心里就不会有多余的余地。</p>
     <p>尽管如此，如果有人开始我们的调查，那就是和梅赛德斯一样没有发现竞争意义的人。</p>
     <p>梅赛德斯认为，迷宫不是那么简单就能通关的，大多会遭到守护者的报复，所以没有必要惊慌失措。</p>
