--- a/OEBPS/Text/c107.xhtml
+++ b/OEBPS/Text/c107.xhtml
@@ -14,7 +14,7 @@
     <h1>107. 精灵的少女</h1>
     <p>梅赛德斯每次挥舞哈尔巴德的时候，seeker们都落得非常有意思。</p>
     <p>在这么浅的阶层苦战着的家伙们不是现在的梅赛德斯的敌人。</p>
-    <p>但是数量很多，再加上掉下来的贴纸也在一层楼层里听完之后马上回到这里，所以不能太悠闲。</p>
+    <p>但是数量很多，再加上掉下来的seeker也在一层楼层里听完之后马上回到这里，所以不能太悠闲。</p>
     <p>远远围观的seeker放置不管，首先排除成为妨碍的人抢夺了武具。</p>
     <p>现在梅赛德斯持有的是剑、小手、盾三种。</p>
     <p>因为再也拿不动石头一次向门，陷入各自的洼坑。</p>
