--- a/OEBPS/Text/c045.xhtml
+++ b/OEBPS/Text/c045.xhtml
@@ -30,9 +30,9 @@
     <p>一脸轮廓清晰。可是奇特的打扮毁坏着好不容易角度的素材。</p>
     <p>骑着男子的马在迷茫的梅赛德斯面前停了下来，把男子甩了下去。</p>
     <p>被掉落的男子以崩溃的Elka般的姿势倒在了地上,不过，马上站起来俯视梅赛德斯。</p>
-    <p>“小丫头。你是梅赛德斯·格鲁内瓦特吧？我是吉克斯图斯·谢恩贝尔克。</p>
-    <p>作为谢恩贝尔克侯爵家的长子，迟早要继承谢恩贝尔克领地的男人哟。</p>
-    <p>年龄是今年二十岁！因为品行恶劣而留级两次！”</p>
+    <p>“<span class="character">小丫头。你是梅赛德斯·格鲁内瓦特吧？我是吉克斯图斯·谢恩贝尔克。</span></p>
+    <p><span class="character">作为谢恩贝尔克侯爵家的长子，迟早要继承谢恩贝尔克领地的男人哟。</span></p>
+    <p><span class="character">年龄是今年二十岁！因为品行恶劣而留级两次！</span>”</p>
     <p>又来奇怪了……。</p>
     <p>梅赛德斯一边这么想着，一边用冷漠的眼神观察着男子。</p>
     <p>“<span class="character">可喜的小丫头。你允许我加入‘螺旋’派</span>”</p>
@@ -70,16 +70,16 @@
     <p>但是因为大叔特别多，说不定男女不老期容易产生差别。</p>
     <p>不管怎样，因为没有义理陪那样的笨蛋，放置还在争吵的吉克斯图斯离开了食堂。</p>
     <p>今天的课是魔法。到目前为止只是理论学习．不过，从下面终于转移到实践。既然你们也在这个班级，某种程度的魔法已经能使用，不过，不明白基础不能前进。所以今天最后进行简单的小测试。这样一来，如果有取得比 70 分低的人在，那就是补习。做好觉悟吧”</p>
-    <p>上课的同学们都对古斯塔夫说的话感到紧张。考试真讨厌。对学生来说可以说是恶魔的语言。不介意那样的学生们的反应，古斯塔夫淡泊地开始到现在的复习。考试前这样教他的正是他的优点。”所谓魔法，就是推动存在于大气中的‘玛娜’产生各种现象的力量。</p>
-    <p>给这个玛娜带来的影响力越大魔法也就越强。我们称之为 【魔力 】 ”</p>
+    <p>上课的同学们都对古斯塔夫说的话感到紧张。考试真讨厌。对学生来说可以说是恶魔的语言。不介意那样的学生们的反应，古斯塔夫淡泊地开始到现在的复习。考试前这样教他的正是他的优点。”<span class="character">所谓魔法，就是推动存在于大气中的‘玛娜’产生各种现象的力量。</span></p>
+    <p><span class="character">给这个玛娜带来的影响力越大魔法也就越强。我们称之为 【魔力 】 </span>”</p>
     <p>学生们拼命倾听古斯塔夫的话，在羊皮纸上抄写。不愧是成绩名列前茅的 A 班，大半都很认真。但是，也有些学生虽然只是很少，却没有认真听。他们一定对自己的学习能力很骄傲吧，不过他们明年就会从这个班级消失吧。</p>
-    <p>．这魔力究竟是什么，我并不清楚。但是如果使用减少的东西，也有如果使用过多丢失生命的事。测量持续使用魔法的人的体重的地方，虽然只有一点点但是有减少这样的研究结果，使用体内的‘什么’没错吧” '</p>
-    <p>’老师，那个没问题吗 … … ？ "</p>
-    <p>’没问题。如果过度使用会危及生命，但害健康，也不会是一般使用的话不会损影响寿命。减少的体重如果过得普通的话，马上就会恢复原”</p>
+    <p><span class="character">这魔力究竟是什么，我并不清楚。但是如果使用减少的东西，也有如果使用过多丢失生命的事。测量持续使用魔法的人的体重的地方，虽然只有一点点但是有减少这样的研究结果，使用体内的‘什么’没错吧”</span> '</p>
+    <p>’<span class="character">老师，那个没问题吗 … … ？</span> "</p>
+    <p>’<span class="character">没问题。如果过度使用会危及生命，但害健康，也不会是一般使用的话不会损影响寿命。减少的体重如果过得普通的话，马上就会恢复原</span>”</p>
     <p>梅赛德斯，，。知道古斯塔夫所说的”什么”的真面目肯定是在使用纳米机器吧。这个世界的东西是用纳米机器做出来的。魔物、道具、吸血鬼都有。</p>
     <p>通过自己的纳米机器向外面的纳米机器进行运动，通过改变排列和改变反应，可以引起各种各样的现象，可以变成火和水 … … 不是吗？不过，仅仅这样还不能成为操纵重力的理由，应该还有什么吧。或者，正因为是人工原子，所以无论是重力还是力量都可以使用。 … … 全部没超出推测的范围。</p>
-    <p>“魔法是‘将印象变为现实的力量’。玛娜回应形象，实现所想描绘的东西。魔法所需要的是想象力。无法想象的东西连魔法都做不到，容易想象的话魔法的成功率也会上升。但是，从最初开始仅仅凭想象来创作魔法是很困难的。正因为如此，谁都有容易想象的现存魔法。</p>
-    <p>比如，作为火属性的初级魔法 《 弗兰梅 》 等很有名，所以很容易给人留下深刻的印象”说明的同时，古斯塔夫在指尖点燃了火焰。他好像有火属性。”过于固有观念不是件好事，但魔法有时也会成为力量。</p>
+    <p>“<span class="character">魔法是‘将印象变为现实的力量’。玛娜回应形象，实现所想描绘的东西。魔法所需要的是想象力。无法想象的东西连魔法都做不到，容易想象的话魔法的成功率也会上升。但是，从最初开始仅仅凭想象来创作魔法是很困难的。正因为如此，谁都有容易想象的现存魔法。</span></p>
+    <p><span class="character">比如，作为火属性的初级魔法 《 弗兰梅 》 等很有名，所以很容易给人留下深刻的印象</span>”说明的同时，古斯塔夫在指尖点燃了火焰。他好像有火属性。”过于固有观念不是件好事，但魔法有时也会成为力量。</p>
     <p>与能清楚地描绘 『 弗朗米是这样的东西 】 完成形的人和， 【不明白连火也发出就行了吧 】 的模糊的印象以外不持（有）的东西，魔法的完成度产生了差异”如果古斯塔夫的说明正确的话，也就是说，越是．知道的魔法”就越能明确地给人留下深刻的印象。</p>
     <p>其实无论是谁，只要发挥想象力就能创造出原创的魔法，那么缺乏想象力的人就会被抛弃。所以，以“这个魔法就是这样的名字，这样的效果就是这样的”这种形式存在的魔法很有用。并且从这点来说梅赛德斯压倒性地有利。知道的魔法的数量不同。</p>
     <p>前世看到的创作物中出现的许多魔法和特殊能力，不用说都是妄想的产物。但是以绘画和映像的形式简单易懂地展示出来的是 『 被完成的印象 』 。所谓创作物，可以说是创作出了那个的作者的想象力的具现化。假如是这个世界进行魔法战斗的漫画书，那即使成为魔法师的圣典也不奇怪。</p>
