--- a/OEBPS/Text/c048.xhtml
+++ b/OEBPS/Text/c048.xhtml
@@ -20,26 +20,26 @@
     <p>留下了少数敌人撤退了。</p>
     <p>汉娜他们抓住的只有那剩下的少数隐密兵。</p>
     <p>“<span class="character">那么伯母，那家伙能问出什么来吗？</span>”</p>
-    <p>“大体上信息已经被榨取了，但是没有比已经知道的更多信息了。</p>
-    <p>硬要说的话，隐密队的目的不是暗杀吉克林德公主，而是捕获，这已经是过去的事情了。</p>
-    <p>这次的事情，除了为了降低伯恩哈特的影响力以外，好像没有其他情报”</p>
+    <p>“<span class="character">大体上信息已经被榨取了，但是没有比已经知道的更多信息了。</span></p>
+    <p><span class="character">硬要说的话，隐密队的目的不是暗杀吉克林德公主，而是捕获，这已经是过去的事情了。</span></p>
+    <p><span class="character">这次的事情，除了为了降低伯恩哈特的影响力以外，好像没有其他情报</span>”</p>
     <p>汉娜对梅赛德斯的提问感到为难。</p>
     <p>这次捕获的白色装束在敌人的隐密士兵中属于小队长级别，和那些杂鱼级别不同。</p>
     <p>大体上是意外打而且是多对一轻松能取胜,不过，有只是回避汉娜的初击的技能。</p>
     <p>因此，我以为它有重要信息，伯恩哈特也期待它以菲利克斯为诱饵。</p>
     <p>但是，结果没有发挥，出来的只有旧的信息。</p>
     <p>“<span class="character">应该看成被抛弃了吗？</span>”</p>
-    <p>“是的。本次击落伯恩哈特影响力的作战原本应该是和殿下的绑架组合进行的。</p>
-    <p>掠夺殿下，使之丢落国内最麻烦的伯恩哈特的发言力的事伊扎克很长地在宝座里(上)坐的那样准备，并且看桌子让殿下渡过王剑从宝座丢落伊扎克。</p>
-    <p>于是，殿下和贝亚特里克斯帝国友好地打败了坏蛋，向殿下卖恩，不战而胜，实质上将奥克斯作为属国。这是敌人的目标”</p>
+    <p>“<span class="character">是的。本次击落伯恩哈特影响力的作战原本应该是和殿下的绑架组合进行的。</span></p>
+    <p><span class="character">掠夺殿下，使之丢落国内最麻烦的伯恩哈特的发言力的事伊扎克很长地在宝座里(上)坐的那样准备，并且看桌子让殿下渡过王剑从宝座丢落伊扎克。</span></p>
+    <p><span class="character">于是，殿下和贝亚特里克斯帝国友好地打败了坏蛋，向殿下卖恩，不战而胜，实质上将奥克斯作为属国。这是敌人的目标</span>”</p>
     <p>汉娜对吉克林德的话加以说明。</p>
     <p>虽然敌人的目标是伯恩哈特推理的，但梅赛德斯和汉娜都认为大概不会有错。</p>
     <p>并且从这次捕捉的白装束榨取了的信息推理正确的确证也得到了。</p>
     <p>但是，既然伯恩哈特已经放弃了，那只能通过已有的情报来进行回答。</p>
     <p>也就是说，能够听到的信息实际上什么都没有。</p>
-    <p>“既然没有得到重要的殿下，这个作战已经瓦解。</p>
-    <p>很遗憾，那件白衣被其他干部用来做诱饵。</p>
-    <p>其他的隐密兵恐怕现在已经结束撤退了”</p>
+    <p>“<span class="character">既然没有得到重要的殿下，这个作战已经瓦解。</span></p>
+    <p><span class="character">很遗憾，那件白衣被其他干部用来做诱饵。</span></p>
+    <p><span class="character">其他的隐密兵恐怕现在已经结束撤退了</span>”</p>
     <p>“<span class="character">真是晚了一步</span>”</p>
     <p>“<span class="character">不，太早了。在敌人行动之前，被伯恩哈特和梅尔击溃了，敌人不得不撤退了</span>”</p>
     <p>一边这样说着，汉娜一边鼓起脸颊，一边憎恨梅赛德斯。</p>
@@ -52,12 +52,12 @@
     <p>但是汉娜并不是没有错。</p>
     <p>如果她能好好地与伯恩哈特取得联络把握梅赛德斯的原形，就不会迷失了，在商量之后也能共同战斗。</p>
     <p>她也知道那个所以很复杂。</p>
-    <p>“虽然也发了抗议书，但是不知道的情况下就结束了。</p>
-    <p>也没有证据能证明贝亚特里克斯帝国的人”</p>
-    <p>“等一下。袭击的时机性地A级内通者应该在。那边怎么样了？</p>
-    <p>“已经抓到了。殿下的包围了吧？其中一人就是这样，所以我让他转校。</p>
-    <p>……但是呢，总觉得太清爽了。</p>
-    <p>好像被撒的饵料给抓到了，心里不舒服”</p>
+    <p>“<span class="character">虽然也发了抗议书，但是不知道的情况下就结束了。</span></p>
+    <p><span class="character">也没有证据能证明贝亚特里克斯帝国的人</span>”</p>
+    <p>“<span class="character">等一下。袭击的时机性地A级内通者应该在。那边怎么样了？</span></p>
+    <p>“<span class="character">已经抓到了。殿下的包围了吧？其中一人就是这样，所以我让他转校。</span></p>
+    <p><span class="character">……但是呢，总觉得太清爽了。</span></p>
+    <p><span class="character">好像被撒的饵料给抓到了，心里不舒服</span>”</p>
     <p>A班有指示袭击时机的内通者。</p>
     <p>梅赛德斯以为那是汉娜，汉娜以为是梅赛德斯。</p>
     <p>但是实际上，不管在哪个地方，密探从完全没有关系的不显眼的地方出来了。</p>
@@ -73,9 +73,9 @@
     <p>吉克哈特是吉克林德，影武者是真货？太复杂了，不明白意思。</p>
     <p>汉娜阿姨，为什么混在十一岁的孩子里上课？请考虑一下自己的年龄。</p>
     <p>伊扎克王是假的，国王一家也是假的？那个传闻是真的吗？</p>
-    <p>然后，父亲和妹妹已经被处刑了？怎么回事？</p>
-    <p>“菲利克斯不是让你担心的事。小孩子本来就不应该和这种事有牵连。</p>
-    <p>倒不如把卷入其中的事向我道歉”</p>
+    <p>然后，已经被父亲和妹妹处刑了？怎么回事？</p>
+    <p>“<span class="character">菲利克斯不是让你担心的事。小孩子本来就不应该和这种事有牵连。</span></p>
+    <p><span class="character">倒不如把卷入其中的事向我道歉</span>”</p>
     <p>“<span class="character">但是，梅赛德斯……</span>”</p>
     <p>“<span class="character">这个孩子不可以参考</span>”</p>
     <p>总觉得被汉娜不正当的评价。</p>
@@ -88,11 +88,11 @@
     <p>迄今为止几百年未被制霸的东西，如果放任几年，怎么能超越呢？</p>
     <p>在学园上学的这七年里，尽可能地发挥自己的力量。如果不那样做的话，别说迷宫的称霸了，就连战胜柏林哈特都困难吧。</p>
     <p>“<span class="character">汉娜。我想问一下……我还是父辈的孩子吧？</span>”</p>
-    <p>“……被敌人说了吗？</p>
-    <p>“啊。不，其实我也隐隐约约地这么想。</p>
-    <p>我跟父亲一点都不像，头发的颜色也不一样。所以……或许，母亲是和其他男人生下的孩子……我一直在想”</p>
-    <p>“提起菲利克斯的母亲，应该是瓦尔堡加吧。</p>
-    <p>虽然我不认为这是出轨之类的吸血鬼人……啊—，但是老公那么想花心也不奇怪吧”</p>
+    <p>“<span class="character">……被敌人说了吗？</span></p>
+    <p>“<span class="character">啊。不，其实我也隐隐约约地这么想。</span></p>
+    <p><span class="character">我跟父亲一点都不像，头发的颜色也不一样。所以……或许，母亲是和其他男人生下的孩子……我一直在想</span>”</p>
+    <p>“<span class="character">提起菲利克斯的母亲，应该是瓦尔堡加吧。</span></p>
+    <p><span class="character">虽然我不认为这是出轨之类的吸血鬼人……啊—，但是老公那么想花心也不奇怪吧</span>”</p>
     <p>看来菲利克斯的母亲是瓦尔堡加。</p>
     <p>在生日会上见过一次桃色头发的女性应该是菲利克斯的母亲。</p>
     <p>虽然外表看起来很可怜的夫人，但名字却相当雄伟。</p>
@@ -104,9 +104,9 @@
     <p>伯恩哈特是那样的性格，爱妻子等当然不适合。不提供家庭服务。</p>
     <p>不管待遇有多好，那么就算被劈腿了也不会有怨言吧。</p>
     <p>至少汉娜自己认为像伯恩哈特这样的丈夫是不行的。如果丈夫是那样的男人，现在应该离婚了吧。</p>
-    <p>“恩，头发的颜色和父母不一样，虽然很少见，但也不是不可能的。</p>
-    <p>比如说有时也会因为奶奶、爷爷等人的血而变成那样”</p>
-    <p>“<span class="character">そ、そうか</span>”</p>
+    <p>“<span class="character">恩，头发的颜色和父母不一样，虽然很少见，但也不是不可能的。</span></p>
+    <p><span class="character">比如说有时也会因为奶奶、爷爷等人的血而变成那样</span>”</p>
+    <p>“<span class="character">是···是吗</span>”</p>
     <p>“<span class="character">嗯。没关系的，一定</span>”</p>
     <p>汉娜用笑容鼓起菲利克斯的勇气，拍着肩膀。</p>
     <p>之后这次的谈判结束了，各自回到了自己的房间。</p>
