--- a/OEBPS/Text/c054.xhtml
+++ b/OEBPS/Text/c054.xhtml
@@ -12,9 +12,9 @@
 
 <body>
     <h1>54. 那个迷宫的主人</h1>
-    <p>“噗噜噗噜！告诉你一个好事吧！</p>
-    <p>在迷宫中出现的魔物所装备的武器是可以夺走的！没有钱买装备的时候很方便！</p>
-    <p>说了废话！去死吧！”</p>
+    <p>“<span class="character">噗噜噗噜！告诉你一个好事吧！</span></p>
+    <p><span class="character">在迷宫中出现的魔物所装备的武器是可以夺走的！没有钱买装备的时候很方便！</span></p>
+    <p><span class="character">说了废话！去死吧！</span>”</p>
     <p>“<span class="character">噗噜噗噜！</span>”</p>
     <p>在迷宫中出现的魔物果冻一击打飞了。</p>
     <p>虽然是像两足行走的老鼠一样的魔物，但不是果冻的敌人。</p>
@@ -44,16 +44,16 @@
     <p>但是，即便如此，一对一的话，所有的敌人都在果冻以下。</p>
     <p>那个果冻多少锻炼后变得比本来强，但并不是特别强。</p>
     <p>这个迷宫太弱了……只能那样想。</p>
-    <p>“给我记住！在迷宫打倒的魔物过了一会儿就消失不见了！</p>
-    <p>但是拆卸后所有物就不会消失！</p>
-    <p>所以我要把你拆开，把它当成我的所有物！”</p>
+    <p>“<span class="character">给我记住！在迷宫打倒的魔物过了一会儿就消失不见了！</span></p>
+    <p><span class="character">但是拆卸后所有物就不会消失！</span></p>
+    <p><span class="character">所以我要把你拆开，把它当成我的所有物！</span>”</p>
     <p>“<span class="character">谢谢你的建议！</span>”</p>
     <p>这次出来的魔物是两足步行的蜥蜴。</p>
     <p>但是不是果冻的敌人。又被果冻毫不在乎地推倒变得不动了。</p>
     <p>并且舒夫很快地解体死去的魔物也是约定。</p>
     <p>果然很弱。简单地，什么辛苦也没有连续不断下来的事能。</p>
     <p>这么简单的话，就让人怀疑是什么陷阱了。</p>
-    <p>“本凯，舒夫。你觉得这个迷宫怎么样？</p>
+    <p>“<span class="character">本凯，舒夫。你觉得这个迷宫怎么样？</span>”</p>
     <p>“<span class="character">我觉得是没有反应的迷宫。出来的魔物只有杂兵</span>”</p>
     <p>梅赛德斯决定听取本凯和舒夫的意见。</p>
     <p>假设是从迷宫中诞生的他们，期待能提出比自己更有意义的意见。</p>
@@ -65,9 +65,9 @@
     <p>但是，梅赛德斯好像被什么牵连着，阻止了本凯。</p>
     <p>这是……意外，不是重要的事吗？我是这样想的。</p>
     <p>“<span class="character">继续吧，舒夫</span>”</p>
-    <p>“是的。譬如那里生长的蘑菇,不过，那个是食用。</p>
-    <p>从那块岩石缝隙中出来的草可以用作药草。</p>
-    <p>出来的魔物全部都是优质的肉，尽是成为素材的东西。没有卖不出去的东西”</p>
+    <p>“<span class="character">是的。譬如那里生长的蘑菇,不过，那个是食用。</span></p>
+    <p><span class="character">从那块岩石缝隙中出来的草可以用作药草。</span></p>
+    <p><span class="character">出来的魔物全部都是优质的肉，尽是成为素材的东西。没有卖不出去的东西</span>”</p>
     <p>“<span class="character">……原来如此</span>”</p>
     <p>梅赛德斯用手捂着下巴思考。</p>
     <p>到这里来，不由得读出这个迷宫里被放入了的意图。</p>
@@ -82,8 +82,8 @@
     <p>也就是说，拥有军队的绝对优势会失去。</p>
     <p>岂止如此，自己的战斗是决斗的同时也成为战争。</p>
     <p>那时，给周围的受害无法估量。</p>
-    <p>“告诉你冥途的礼物！在没有灯光的完全黑暗中，魔物也看不见你的身影！只是用气味和声音探测着！所以如果把它欺骗的话，我们就会迷失你的身影！</p>
-    <p>那么快去地狱吧！”</p>
+    <p>“<span class="character">告诉你冥途的礼物！在没有灯光的完全黑暗中，魔物也看不见你的身影！只是用气味和声音探测着！所以如果把它欺骗的话，我们就会迷失你的身影！</span></p>
+    <p><span class="character">那么快去地狱吧！</span>”</p>
     <p>“<span class="character">我也是魔物所以知道！</span>”</p>
     <p>这次出来的，是木制的人偶一样的魔物。</p>
     <p>果然不是果冻的敌人，只是被打了三拳就不能动了。</p>
