--- a/OEBPS/Text/c071.xhtml
+++ b/OEBPS/Text/c071.xhtml
@@ -20,7 +20,7 @@
     <p>一边享受吹拂脸颊的风的感觉，一边用手轻轻整理蓬乱的头发。</p>
     <p>虽说是刮风，但却觉得很奇怪，在快速移动的时候，感觉就像在自己身上刮风一样。</p>
     <p>（这样从天上看，可以清楚地知道文明还是没有发达。）</p>
-    <p>在梅赛德斯的视野中映出的地上，大部分是山岳地带、草原、森林等法尔什人不居住的地方。</p>
+    <p>在梅赛德斯的视野中映出的地上，大部分是山岳地带、草原、森林等法鲁什人不居住的地方。</p>
     <p>偶尔能看到村子和小镇，但是不那样的地方要多得多。</p>
     <p>这与既不是乡下，无论从哪里看都能看到建筑物的现代日本大不相同。</p>
     <p>以前玩过的怀旧游戏，在广阔的田赛场中孤零零地有城镇和村庄，感觉和那个很近吧。</p>
